--- a/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
+++ b/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
@@ -1,3 +1,3 @@
 ﻿# 取引の流れ
 
-[取引の流れ]![RN Logo](https://dl.dropboxusercontent.com/s/95kuog1ngpvn1x2/%E5%8F%96%E5%BC%95%E3%81%AE%E6%B5%81%E3%82%8C.jpg)
+[取引の流れ]![RN Logo](https://image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=%E9%A3%8E%E6%99%AF&step_word=&hs=0&pn=23&spn=0&di=173798600580&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&istype=2&ie=utf-8&oe=utf-8&in=&cl=2&lm=-1&st=-1&cs=2377616664%2C3697502525&os=4023057424%2C793588928&simid=3336078186%2C275375763&adpicid=0&lpn=0&ln=1922&fr=&fmq=1554193153467_R&fm=detail&ic=0&s=undefined&hd=undefined&latest=undefined&copyright=undefined&se=&sme=&tab=0&width=&height=&face=undefined&ist=&jit=&cg=&bdtype=0&oriquery=&objurl=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F0%2F57fb00bbec9db.jpg&fromurl=ippr_z2C%24qAzdH3FAzdH3Fooo_z%26e3Botg9aaa_z%26e3Bv54AzdH3Fowssrwrj6_1jpwts_8899m8_n_z%26e3Bip4s&gsm=0&rpstart=0&rpnum=0&islist=&querylist=&force=undefined)
