--- a/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
+++ b/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
@@ -1,3 +1,3 @@
 ﻿# 取引の流れ
 
-[取引の流れ]![RN Logo](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1554203386692&di=b8f1712a700844f3b2a39e4ff91e3a4e&imgtype=0&src=http%3A%2F%2Fpic.rmb.bdstatic.com%2F95722cd48dc2b3c6bc571116a7da5c94.jpeg)
+[取引の流れ]![RN Logo](https://dl.dropboxusercontent.com/s/95kuog1ngpvn1x2/%E5%8F%96%E5%BC%95%E3%81%AE%E6%B5%81%E3%82%8C.jpg)
