--- a/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
+++ b/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
@@ -1,3 +1,5 @@
 ﻿# 取引の流れ
 
-[取引の流れ]![RN Logo](https://dl.dropboxusercontent.com/s/95kuog1ngpvn1x2/%E5%8F%96%E5%BC%95%E3%81%AE%E6%B5%81%E3%82%8C.jpg)
+[取引の流れ]
+
+![RN Logo](https://dl.dropboxusercontent.com/s/95kuog1ngpvn1x2/%E5%8F%96%E5%BC%95%E3%81%AE%E6%B5%81%E3%82%8C.jpg)
