--- a/6.お問い合わせ/1.出品について/1.出品商品にコメントが送れない.md
+++ b/6.お問い合わせ/1.出品について/1.出品商品にコメントが送れない.md
@@ -24,4 +24,4 @@
 ---
 
 上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](https://github.com/sendroidsFamily/useGuides/blob/master/6.%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B/1.%E5%87%BA%E5%93%81%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6/support@conepoke.com)
