--- a/6.お問い合わせ/1.出品について/1.出品商品にコメントが送れない.md
+++ b/6.お問い合わせ/1.出品について/1.出品商品にコメントが送れない.md
@@ -24,4 +24,4 @@
 ---
 
 上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-<a href=mailto:support@conepoke.com>[コネポケ事務局へ問い合わせ]</a>
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
