--- a/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/8.会員登録情報の変更方法.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/8.会員登録情報の変更方法.md
@@ -20,7 +20,7 @@
    ※お名前、フリガナ、性別、生年月日は変更できません
 
    ※誤って入力された場合や、ご結婚などによりお名前が変更となった場合は、身分証の画像を添えてコネポケ事務局までご連絡ください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
 
 ### ■スマートフォンブラウザをご利用の場合
 
