--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/4.退会した後、再登録したい.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/4.退会した後、再登録したい.md
@@ -24,4 +24,4 @@ IDとパスワードがわからない、ログインできない場合は、以
 
     ※登録メールアドレス・携帯電話番号と現在ご利用のメールアドレス・携帯電話番号が相違している場合、併せてご明記ください。  
 
-[再登録のお問い合わせ](support@conepoke.com) はこちら
+[再登録のお問い合わせ](mailto:support@conepoke.com) はこちら
