--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/8.店舗登録情報の変更方法.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/8.店舗登録情報の変更方法.md
@@ -3,7 +3,7 @@
 店舗登録情報の変更はできません。
 
 「店名」「代表者様」「ご住所」を変更された場合は、下記いづれかの確認書類の画像を添えて、コネポケ事務局までご連絡ください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
 
     ・登記簿謄本（発行から3ヵ月以内のもの/法人様の場合）
     ・公共料金の請求書または領収書（会社名と住所が記載されたもので3ヵ月以内のもの）  
