--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/3.本人確認書類がアップロードできない.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/3.本人確認書類がアップロードできない.md
@@ -13,4 +13,4 @@
 アプリを再起動しても画像がアップロードできない場合は、お手数ですがしばらく時間を置いてから、安定した通信環境での操作を試しください。
 
 上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
