--- a/3.よくある質問/12.「いいね！」ができません.md
+++ b/3.よくある質問/12.「いいね！」ができません.md
@@ -9,4 +9,4 @@
 ---
 
 できない場合は不具合の可能性がありますので、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)  
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
