--- a/3.よくある質問/15.不具合が発生した時.md
+++ b/3.よくある質問/15.不具合が発生した時.md
@@ -30,4 +30,4 @@
 ---
 
 上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
