--- a/6.お問い合わせ/3.会員登録について/2.アカウントが停止されました.md
+++ b/6.お問い合わせ/3.会員登録について/2.アカウントが停止されました.md
@@ -6,4 +6,4 @@
 
 なお、メールが届いていない場合やお取引中で連絡をとる必要がある場合、状況について確認いたしますので、下記よりお問い合わせいただきますようお願いいたします。
 
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
