--- a/6.お問い合わせ/4.店舗掲載登録ついて/1.店舗登録ができない.md
+++ b/6.お問い合わせ/4.店舗掲載登録ついて/1.店舗登録ができない.md
@@ -13,7 +13,7 @@
 コネポケへ一度も登録した覚えがない場合、電話番号を以前利用されていた方、もしくはご家族やご友人が、コネポケへご登録いただく際にお客さまの電話番号を使用された可能性が考えられます。
 
 お心あたりがない場合は、下記の内容を添えて、コネポケ事務局へお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
 
     ・本名（フルネーム）  
     ・ご住所（番地まで）  
