--- a/6.お問い合わせ/4.店舗掲載登録ついて/4.店舗掲載登録を解約する.md
+++ b/6.お問い合わせ/4.店舗掲載登録ついて/4.店舗掲載登録を解約する.md
@@ -2,7 +2,7 @@
 
     店舗掲載登録を解約については下記の【退会申請フォーム】より、解約申請をお願いいたします
 
-★[退会申請フォーム](user@conepoke.com)
+★[退会申請フォーム](mailto:user@conepoke.com)
 
 上記をタップ後、メールフォームに必要事項をご入力して送信してください。
 
