--- a/6.お問い合わせ/5.退会について/1.退会する.md
+++ b/6.お問い合わせ/5.退会について/1.退会する.md
@@ -2,7 +2,7 @@
 
     会員の退会については下記の【退会申請フォーム】より、退会申請をお願いいたします
 
-★[退会申請フォーム](user@conepoke.com)
+★[退会申請フォーム](mailto:user@conepoke.com)
 
 上記をタップ後、メールフォームに必要事項をご入力して送信してください。
 
