--- a/6.お問い合わせ/6.不具合について/2.一部の機能が利用できない.md
+++ b/6.お問い合わせ/6.不具合について/2.一部の機能が利用できない.md
@@ -26,4 +26,4 @@
 ---
 
 上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
