--- a/6.お問い合わせ/7.その他/1.機能要望.md
+++ b/6.お問い合わせ/7.その他/1.機能要望.md
@@ -4,5 +4,5 @@
 特に返答はいたしませんがご了承ください。
 
 コネポケに関するご意見・ご要望は  
-★[コネポケ事務局へのご意見・ご要望](support@conepoke.com)★  
+★[コネポケ事務局へのご意見・ご要望](mailto:support@conepoke.com)★  
 よりお受けしております。
