--- a/6.お問い合わせ/6.不具合について/3.本人確認書類がアップロードできない.md
+++ b/6.お問い合わせ/6.不具合について/3.本人確認書類がアップロードできない.md
@@ -12,5 +12,6 @@
 
 アプリを再起動しても画像がアップロードできない場合は、お手数ですがしばらく時間を置いてから、安定した通信環境での操作を試しください。
 
-上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
+上記をお試しいただいても改善できない場合、下記よりお問い合わせください。
+
+[![mail to](https://dl.dropboxusercontent.com/s/klu15tz7y4bx2hv/%E3%83%A1%E3%83%BC%E3%83%AB%E3%83%90%E3%83%8A%E3%83%BC.jpg)](mailto:support@conepoke.com)
