--- a/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
@@ -18,6 +18,8 @@
 
 1. ［出品する］ボタンを押して出品完了です。
 
-※入力途中の情報を下書き保存しておくことも可能です。
+・入力途中の情報を下書き保存しておくことも可能です。
 
-※出品画面の右上の［フォルダアイコン］または、最下部の［下書き一覧］ボタンを押すと保存した下書き一覧が表示されます。
+・出品画面の右上の［フォルダアイコン］または、最下部の［下書き一覧］ボタンを押すと保存した下書き一覧が表示されます。
+
+修正しました
