--- a/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
+++ b/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
@@ -2,4 +2,4 @@
 
 [取引の流れ]
 
-![guide](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/images/guide.jpg)
+![guide](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/images/guide.png)
