--- a/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
+++ b/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
@@ -1,9 +1,5 @@
 ﻿# 取引の流れ
 
-<<<<<<< HEAD
 [取引の流れ]
 
-![guide](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/images/guide.png)
-=======
-![RN Logo](https://dl.dropboxusercontent.com/s/95kuog1ngpvn1x2/%E5%8F%96%E5%BC%95%E3%81%AE%E6%B5%81%E3%82%8C.jpg)
->>>>>>> df0b2dcc0e7bcc7cdb75d6b36b0ba30295e53877
+![guide](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/guide.png)
