--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -1,22 +1,22 @@
 # 利用料について
-
-## 登録 #### 出品 #### レスポンスのご利用は無料です。
+  
+## 登録・出品・レスポンスのご利用は無料です。
 
 ただし、以下のサービスのご利用は`月額324円`の`プレミアム会員登録`をお願いいたします。
-
-## プレミアム会員
+  
+## プレミアム会員  
 
     ・出品商品を無制限に引き取れる
     ・リクエストに対してレスポンスがあった商品を無制限に引き取れる
-
-## スタンダード会員
+  
+## スタンダード会員  
 
     ・商品を出品する
     ・欲しい商品をリクエストする
     ・リクエスト商品へレスポンスをする
     ・出品商品・リクエスト商品へコメントで質問する
-
-## 店舗掲載登録
+  
+## 店舗掲載登録  
 
 店舗掲載登録のご利用は`月額10,800円`の`店舗掲載料`がかかります。
 
