--- a/4.カテゴリから探す/1.出品について/1.約束をしたのに相手が来ない.md
+++ b/4.カテゴリから探す/1.出品について/1.約束をしたのに相手が来ない.md
@@ -2,13 +2,12 @@
 
 不適切な対応をされるユーザーがいらっしゃる場合、問題発生となった対象商品ページより詳細内容を記載の上、［**通報**］ください。
 
-    【通報できる内容】
+## 【通報できる内容】
 
     ・不適切なコメント  
     ・規約に違反する出品  
     ・規約に違反する行為  
     ・法令違反の報告  
     ・悪質ユーザーの報告  
-    ・その他
-
+    ・その他  
 悪質なユーザーの場合はアカウント停止などを検討させていただきます。
