--- a/6.お問い合わせ/7.その他/1.機能要望.md
+++ b/6.お問い合わせ/7.その他/1.機能要望.md
@@ -3,6 +3,5 @@
 事務局ではユーザー様の機能要望を参考にさせていただき随時、機能改善してまいります。  
 特に返答はいたしませんがご了承ください。
 
-コネポケに関するご意見・ご要望は  
-★[コネポケ事務局へのご意見・ご要望](mailto:support@conepoke.com)★  
-よりお受けしております。
+コネポケに関するご意見・ご要望はメールにてお受けしております。
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail.jpg)](mailto:support@conepoke.com)
