--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -1,11 +1,11 @@
-# コネポケで禁止されている出品物
+# コネポケで禁止されている出品物  
+  
+## **法令に違反する・抵触する恐れがあるもの**
 
-## `法令に違反する・抵触する恐れがあるもの`
-
-## `法令で譲渡・所持が規制されているもの`
+## **法令で譲渡・所持が規制されているもの**
 
     法令違反に抵触する恐れのあるもの
-    主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
+    主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。  
 
 ## 【銃砲類、刀剣類】
 
