--- a/4.カテゴリから探す/1.出品について/5.取引相手が「いいね！」をしてくれない.md
+++ b/4.カテゴリから探す/1.出品について/5.取引相手が「いいね！」をしてくれない.md
@@ -1,6 +1,5 @@
 # 取引相手が「いいね！」をしてくれない
 
-「いいね！」のクリックは任意ですので、気にしていなかったり、
-忘れているだけかもしれません。　　
+「いいね！」のクリックは任意ですので、気にしていなかったり、忘れているだけかもしれません。　　
 
 お相手ユーザ様に取引メッセージから連絡してみてください。
