--- a/4.カテゴリから探す/1.出品について/4.商品写真を編集したい.md
+++ b/4.カテゴリから探す/1.出品について/4.商品写真を編集したい.md
@@ -7,8 +7,8 @@
 
 一度確定しますと、画像の再編集はできませんので、「×」で写真を削除後、再度アップロードください。
 
-- すでに出品している商品は、出品した商品を一時的に取り下げ、下書きに保存します。  
-既に出品中の商品の編集方法は［はじめてガイド］＞［出品する］＞［出品商品を下書きに保存する、編集する」をご確認ください。
+    すでに出品している商品は、出品した商品を一時的に取り下げ、下書きに保存します。  
+    既に出品中の商品の編集方法は［はじめてガイド］＞［出品する］＞［出品商品を下書きに保存する、編集する」をご確認ください。
 
 出品ページで写真をタップすると、写真の登録画面が表示されます。
 
