--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -4,7 +4,7 @@
   
 ## **法令で譲渡・所持が規制されているもの**  
   
-**法令違反に抵触する恐れのあるもの**  
+<font color="red">**法令違反に抵触する恐れのあるもの**</font>    
 **主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します**  
   
 ## 【銃砲類、刀剣類】
