--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -1,12 +1,16 @@
 # コネポケで禁止されている出品物  
-   
+
+<br />  
+
 ## **法令に違反する・抵触する恐れがあるもの**  
   
 ## **法令で譲渡・所持が規制されているもの**  
   
-<font color="red">**法令違反に抵触する恐れのあるもの**</font>    
-**主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します**  
-  
+**法令違反に抵触する恐れのあるもの**
+**主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します** 
+
+<br />
+
 ## 【銃砲類、刀剣類】
 
 銃刀法違反にあたるもの  
