--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -12,7 +12,7 @@
 銃刀法違反にあたるもの  
 武器類とみなされるもの
 
-### ■主な違反商品
+## ■主な違反商品
 
 拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲  
 刀、ナイフ、包丁などで6cmを超えるもの
@@ -27,7 +27,7 @@
 
 覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの
 
-### ■主な違反商品
+## ■主な違反商品
 
 麻薬、あへん、覚せい剤、向精神薬などの薬物、大麻草や芥子などの植物
 
@@ -57,8 +57,7 @@
 
 偽物の可能性がある商品を見つけた場合は商品ページの「通報」からご連絡をお願いいたします。
 
-
-### ■主な違反商品
+### ◼主な違反商品
 
 偽造貨幣、偽造カード、偽造印鑑、偽造文書
 
@@ -210,7 +209,6 @@
 
 法令に抵触する状態に改造を施したもの
 
-
 ### ■主な違反商品
 
 ピッキングツール、マスターキー、錠と一対になっていない鍵など
@@ -258,7 +256,6 @@ PSマーク、PSCマークがないことで法令に抵触するもの
 ニコチンが含まれる電子たばこ、リキッド
 
 その他ニコチンやタールが含まれるもの全般
-
 
 ## 【食料品、飲料品、アルコール類】
 
