--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -6,8 +6,8 @@
 
 ## プレミアム会員
 
-    ・出品商品を無制限に引き取れる
-    ・リクエストに対してレスポンスがあった商品を無制限に引き取れる
+    ●出品商品を無制限に引き取れる
+    ●リクエストに対してレスポンスがあった商品を無制限に引き取れる
 
 ## スタンダード会員
 
