--- a/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
@@ -2,9 +2,9 @@
 
 ## コネポケの特徴
 
-`「世界からゴミをなくそう」`
+### 「世界からゴミをなくそう」
 
-`「大切にしていた物を次の誰かへ」`
+### 「大切にしていた物を次の誰かへ」
 
 「捨てたいけど捨てられない」  
 「捨てるのことができないから誰かに使って欲しい」  
@@ -13,7 +13,7 @@
 
 色々な事情があって処分に困っている方は大勢いると思います。
 
-人の人生と同じように、`「物」`にも思い出や物語がたくさんあります。
+人の人生と同じように、**「物」**にも思い出や物語がたくさんあります。
 
 「初めての給料で買った」「人からもらった」「産まれた時からずっと使っていた」「何年間も生活の一部であった」「恋人と使った」
 
@@ -29,8 +29,8 @@
 
 ## コネポケの名前の由来
 
-コネクトポケットconnect pocketの略です。
+### コネクトポケットconnect pocketの略です。
 
-コネクト（繋がる）ポケット（色々な物が入る）
+### コネクト（繋がる）ポケット（色々な物が入る）
 
-「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。
+### 「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。
