--- a/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
@@ -1,10 +1,10 @@
-# コネポケについて
+# コネポケについて  
 
 ## コネポケの特徴
 
 ### 「世界からゴミをなくそう」
 
-### 「大切にしていた物を次の誰かへ」
+「大切にしていた物を次の誰かへ」
 
 「捨てたいけど捨てられない」  
 「捨てるのことができないから誰かに使って欲しい」  
