--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -6,27 +6,21 @@
 
 ## プレミアム会員
 
-```a
-●出品商品を無制限に引き取れる
-●リクエストに対してレスポンスがあった商品を無制限に引き取れる
-```  
+- 出品商品を無制限に引き取れる  
+- リクエストに対してレスポンスがあった商品を無制限に引き取れる  
   
 ## スタンダード会員  
 
-```a
-●商品を出品する
-●欲しい商品をリクエストする
-●リクエスト商品へレスポンスをする
-●出品商品・リクエスト商品へコメントで質問する
-```
-  
+- 商品を出品する  
+- 欲しい商品をリクエストする  
+- リクエスト商品へレスポンスをする  
+- 出品商品・リクエスト商品へコメントで質問する  
+
 ## 店舗掲載登録
 
-```a
 店舗掲載登録のご利用は**月額10,800円**の**店舗掲載料**がかかります。
 
-●店舗様専用ページに広告として店舗掲載を掲載
-●出品商品を無制限に引き取れる
-●リクエストに対してレスポンスがあった商品を無制限に引き取れる
-●利用ユーザー様が店舗情報を見て直接仕事を依頼
-```
+- 店舗様専用ページに広告として店舗掲載を掲載  
+- 出品商品を無制限に引き取れる  
+- リクエストに対してレスポンスがあった商品を無制限に引き取れる  
+- 利用ユーザー様が店舗情報を見て直接仕事を依頼  
