--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -24,3 +24,9 @@
 - 出品商品を無制限に引き取れる  
 - リクエストに対してレスポンスがあった商品を無制限に引き取れる  
 - 利用ユーザー様が店舗情報を見て直接仕事を依頼  
+
+<span style="color: red; ">ご注意ください</span>
+
+<span style="color: blue; ">ご注意ください</span>
+
+<font color="Pink">ご注意ください</font>
