--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -30,3 +30,11 @@
 <span style="color: blue; ">ご注意ください</span>
 
 <font color="Pink">ご注意ください</font>
+
+<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333;">
+   ご注意ください。
+</div>
+
+<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #ffff99;">
+    ご注意ください。
+</div>
