--- a/5.利用規約など/利用規約など/1.利用規約.md
+++ b/5.利用規約など/利用規約など/1.利用規約.md
@@ -240,7 +240,7 @@
 
 ## 第29条（管轄裁判所）  
 
-当社と会員との間における訴訟は、当社の本店所在地を管轄する地方裁判所又は簡易裁判所を第一審の専属的合意管轄裁判所とします。  
+当社と会員との間における訴訟は、当社の本店所在地を管轄する東京地方裁判所又は東京簡易裁判所を第一審の専属的合意管轄裁判所とします。  
 
 ## 第30条（準拠法）  
 
