--- a/5.利用規約など/利用規約など/1.利用規約.md
+++ b/5.利用規約など/利用規約など/1.利用規約.md
@@ -28,14 +28,14 @@
 1.当社は、次に掲げるサービスを本サービスとして提供します。  
 （1）不用品・リサイクル品を無料で受渡しする機会を提供するサービス  
 （2）店舗掲載会員の店舗情報を広告として掲載するサービス  
-（3）その他本アプリ及び本サイトに掲載するサービス  
+（3）その他、本アプリ及び本サイトに掲載するサービス  
 2.スタンダード会員は、商品の出品、その他本サービスに定める機能を利用することができます。  
 3.プレミアム会員は、スタンダード会員が可能な事項に加えて、次に掲げる事項ができます。  
 （1）出品されている商品の引き取り  
 （2）商品のリクエスト  
 （3）リクエストした商品を受け取る  
 4.店舗掲載登録会員は、プレミアム会員のサービス及び会員の店舗情報を広告として掲載するサービスのご利用ができます。  
-5.本サービスの一部である、不用品・リサイクル品を無料で受渡しする場を提供するサービスにおいて、当社は場を提供するのみであり、受け渡しの当事者となることはありません。そのため当事者としての責任を負わないものとします。  
+5.本サービスの一部である、不用品・リサイクル品を無料で受渡しする場を提供するサービスにおいて、当社は場を提供するのみであり、受け渡しの当事者となることはありません。そのため、当事者としての責任を負わないものとします。  
 
 ## 第4条（コネポケ会員登録）
 
@@ -52,7 +52,7 @@
 （2）未成年、成年被後見人、被保佐人又は被補助人のいずれかであり、法定代理人、後見人、補佐人又は補助人の同意等を得ていない場合  
 （3）コネポケ会員登録申請の内容に虚偽があった場合  
 （4）過去に本規約に違反したことがある場合  
-（5）その他当社がコネポケ会員登録を承認することが適切でないと判断した場合  
+（5）その他、当社がコネポケ会員登録を承認することが適切でないと判断した場合  
 2.当社は、前項の行為を行った場合に、その理由をコネポケ会員に開示する義務を負いません。  
 
 ## 第6条（ＩＤ・パスワード等の管理）
@@ -65,11 +65,11 @@
 
 1.コネポケ会員は、その種別に応じて、商品の出品、商品の引き取り、リクエスト商品の投稿、レスポンス取引、広告の掲載、その他本アプリ及び本サイトに定めるサービスを利用することができます。  
 2.コネポケ会員は、本サービスを本規約に従い、民法、商法、個人情報保護法、著作権法その他法令を遵守して利用して下さい。  
-3.コネポケ会員は、本サービスを利用したことに関する一切の責任を負います。当社は会員の利用につき特に定める場合を除き、一切の責任を負いません。  
+3.コネポケ会員は、本サービスを利用したことに関する一切の責任を負います。当社は会員の利用につき、特に定める場合を除き、一切の責任を負いません。  
 
 ## 第8条（商品の出品）
 
-1.コネポケ会員は、本サービス所定の手続に従い商品の出品を行うものとします。  
+1.コネポケ会員は、本サービス所定の手続に従い、商品の出品を行うものとします。  
 2.当社は、ガイド記載の特定の出品方法について基準を設け、コネポケ会員が基準に合致しない場合には、審査を行い、当該出品方法の利用を制限することができます。  
 3.コネポケ会員は、ガイドで禁止されている出品物に記載された商品の出品は、禁止されます。  
 4.前項に違反した場合、コネポケ会員の故意又は過失に関わらず、本規約違反行為とみなします。  
@@ -78,7 +78,7 @@
 
 ## 第9条（商品の引取）
 
-1.コネポケ会員は、本サービス所定の手続に従い商品の引取を行うものとします。  
+1.コネポケ会員は、本サービス所定の手続に従い、商品の引取を行うものとします。  
 2.コネポケ会員は、引取に先立ち、会員登録及び本人確認書類を提出する必要があります。  
 3.コネポケ会員は、引取する意思のない申し込み、及び当社の判断でいたずら目的と見受けられる取引を行うことはできません。  
 
@@ -120,15 +120,15 @@
 1.取引メッセージは、取引契約成立後に使用可能で、それまではコメントによりコネポケ会員相互間の連絡を取ります。  
 2.コメントは第三者に公開されます。  
 3.コメント欄での個人情報の投稿や交換は禁止します。  
-4.取引メッセージは、第三者に公開されません。取引契約成立後に、取引メッセージで取引場所、方法、日時を確認のうえ取引を進めてください。  
-5.最新の取引メッセージから2週間取引メッセージの使用がなければ取引メッセージの使用はできなくなります。  
+4.取引メッセージは、第三者に公開されません。取引契約成立後に、取引メッセージで取引場所、方法、日時を確認のうえ、取引を進めてください。  
+5.最新の取引メッセージから2週間取引メッセージの使用がなければ、取引メッセージの使用はできなくなります。  
 
 ## 第15条（店舗掲載登録）
 
-1.広告掲載は、本サービスの定めに従い広告掲載情報を入力し、店舗掲載会員として登録及び決済をすることにより広告掲載が可能になります。  
+1.広告掲載は、本サービスの定めに従い広告掲載情報を入力し、店舗掲載会員として登録及び決済をすることにより、広告掲載が可能になります。  
 2.新規店舗登録時に入力する情報は企業情報や個人情報などの非公開情報です。  
 3.「広告掲載情報」は本サービス上に広告掲載される公開情報です。  
-4.次に掲げる店舗の広告については、掲載を拒否又は取り消す場合があります。掲載を拒否又は取り消した場合においても、当社は、一切の責任を負わないものとします。  
+4.次に掲げる店舗の広告については、掲載を拒否又は取り消す場合があります。掲載を拒否又は取り消した場合においても、当社は一切の責任を負わないものとします。  
 （1）性風俗に関する店舗  
 （2）公序良俗に反すると判断される店舗  
 （3）違法と疑われる店舗  
@@ -175,14 +175,14 @@
 
 1.当社は、本サービスの利用によりコネポケ会員に特定の効果が生じることを保証するものではありません。  
 2.当社は、不用品・リサイクル品を無料で受渡しする場を提供するサービスにおいて、場を提供するのみであり、受け渡しの当事者となることはありません。そのため当事者としての責任を負わないものとします。  
-3.当社は、本サービスの内容について、充分に注意を払いますが、その正確性・完全性・最新性・有用性等に関して、いかなる保証をするものではありません。本サービスの利用については、会員の自主的な判断によるものとします。  
+3.当社は、本サービスの内容について、十分に注意を払いますが、その正確性・完全性・最新性・有用性等に関して、いかなる保証をするものではありません。本サービスの利用については、会員の自主的な判断によるものとします。  
 4.当社は、本サービスで作成したデータの保存、本サービスへのアクセス、本サービス利用によりウィルス等の影響を受けないことについて保証しません。コネポケ会員は自己責任で本サービスをご利用下さい。  
 5.当社は、本サービスに関して会員相互、コネポケ会員と第三者との間に生じた問題については一切の責任を負いません。  
 6.当社は、天災地変等当社の責に帰さない事由により生じた損害、当社の予見の有無を問わず、特別の事情から生じた損害、逸失利益を含む間接損害について賠償責任を負わないものとします。  
 
 ## 第20条（知的財産権等）
 
-本サービスに関する知的財産権等は当社又は正当な権利を有する第三者に帰属します。コネポケ会員は、他のコネポケ会員、当社、その他第三者の権利侵害をすることのないよう利用方法を守って本サービスを利用してください。  
+本サービスに関する知的財産権等は当社又は正当な権利を有する第三者に帰属します。コネポケ会員は、他のコネポケ会員、当社、その他第三者の権利侵害をすることのないよう、利用方法を守って本サービスを利用してください。  
 
 ## 第21条（サービスの中断・停止、内容の変更、終了）
 
@@ -191,10 +191,10 @@
 
 ## 第22条（コネポケ会員登録の退会・解約）
 
-1.コネポケ会員は、コネポケ会員登録を退会・解約する場合は、当社所定の方法により届出を行わなければなりません。当社からの退会手続き完了メールをもって当社とコネポケ会員との間の本サービス利用契約解約が完了したことになります。  
+1.コネポケ会員は、コネポケ会員登録を退会・解約する場合は、当社所定の方法により届出を行わなければなりません。当社からの退会手続き完了メールをもって、当社とコネポケ会員との間の本サービス利用契約解約が完了したことになります。  
 2.当社は、会員登録の退会・解約の理由を問わず、支払われた料金の払い戻しは、日割りで計算した額の返還も含めて、一切行いません。  
 3.当社は、コネポケ会員に次の各号のいずれかに該当する事由が生じた場合には、何らの催告なしに直ちにコネポケ会員登録を退会・解約させることができるものとします。  
-（1）コネポケ会員登録内容に虚偽があったなど会員登録申請段階において会員登録を承認すべきでない事情があったことが判明した場合  
+（1）コネポケ会員登録内容に虚偽があったなど、会員登録申請段階において会員登録を承認すべきでない事情があったことが判明した場合  
 （2）重大な過失又は背信行為があった場合  
 （3）支払いの停止があった場合、又は仮差押、差押、競売、破産手続開始、民事再生手続開始、会社更生手続開始、特別清算開始の申立があった場合  
 （4）手形交換所の取引停止処分を受けた場合  
@@ -224,12 +224,12 @@
 （4）自己若しくは第三者の不正の利益を図る目的又は第三者に損害を加える目的をもってするなど、不当に反社会的勢力を利用していると認められる関係を有すること  
 （5）反社会的勢力に対して資金等を提供し、又は便宜を供与するなどの関与をしていると認められる関係を有すること  
 （6）役員又は経営に実質的に関与している者が、反社会的勢力と社会的に非難されるべき関係を有すること  
-（7）自己又は第三者をして暴力的要求、脅迫的言動、法的責任を超えた不当な要求、風説の流布・偽計・威力等による他人の信用毀損・業務妨害を行うこと  
+（7）自己又は第三者を利用して暴力的要求、脅迫的言動、法的責任を超えた不当な要求、風説の流布・偽計・威力等による他人の信用毀損・業務妨害を行うこと  
 2.当社又はコネポケ会員は、相手方が前項の表明・保証に違反して、前項各号の一にでも該当することが判明したときは、何らの催告をせず、直ちに本サービスに関するすべての契約を解除することができるとともに、被った損害の賠償を請求することができるものとします。  
 
 ## 第26条（権利及び地位の譲渡等）
 
-当社及びコネポケ会員は、本サービスに関する一切の権利、義務及び地位を相手方の承諾なしに、譲渡、転貸、担保差入その他形態を問わず処分することはできないものとします。  
+当社及びコネポケ会員は、本サービスに関する一切の権利、義務及び地位を、相手方の承諾なしに、譲渡、転貸、担保差入その他形態を問わず処分することはできないものとします。  
 
 ## 第27条（分離可能性）
 
@@ -237,7 +237,7 @@
 
 ## 第28条（協議解決）
 
-当社及びコネポケ会員は、本規約に定めのない事項又は本規約の解釈に疑義が生じた場合、互いに信義誠実の原則に従って協議の上速やかに解決を図るものとします。  
+当社及びコネポケ会員は、本規約に定めのない事項又は本規約の解釈に疑義が生じた場合、互いに信義誠実の原則に従って協議の上、速やかに解決を図るものとします。  
 
 ## 第29条（管轄裁判所）
 
