--- a/5.利用規約など/利用規約など/1.利用規約.md
+++ b/5.利用規約など/利用規約など/1.利用規約.md
@@ -146,7 +146,7 @@
 ・Appleアプリ内課金  
 ・Googleアプリ内課金  
 ・クレジットカード決済(JCB・VISA・MASTER・AMEX・DINERS)  
-3.プレミアム会員に登録時に決済、それ以降は自動継続課金とします。  
+3.プレミアム会員は登録時に決済、それ以降は自動継続課金とします。  
 4.店舗掲載会員は会員登録時に決済、それ以降は自動継続課金とします。  
 5.当社は、一度支払われた料金について、法に定める場合を除き、返還する義務を負わないものとします。  
 
