--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 # 利用料について
 
 ## 登録・出品・レスポンスのご利用は無料です。
@@ -38,3 +40,4 @@
 <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #ffff99;">
     ご注意ください。
 </div>
+</meta>
