--- a/3.よくある質問/8.再インストールしたらデーターは消えますか.md
+++ b/3.よくある質問/8.再インストールしたらデーターは消えますか.md
@@ -25,7 +25,8 @@
 
 ※携帯端末により手順が異なる場合がございます。
 
-    現在登録している電話番号、メールアドレスが変更になる際は、ログイン後、
+    現在登録している電話番号、メールアドレスが変更になる際は、
+    ログイン後、
 
     ・電話番号の変更
     ［設定］→［登録電話番号変更］
