--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -1,40 +1,28 @@
 # 利用料について
 
-## 登録・出品・レスポンスのご利用は無料です。
+<font color="#0000ff">［登録］［出品］［レスポンス］</font>のご利用は無料です。
+## **スタンダード会員(無料)**
+<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #f5f5f5; background-color: #f5f5f5;">
+・商品を出品する<br>
+・欲しい商品をリクエストする<br>
+・リクエスト商品へレスポンスをする<br>
+・出品商品・リクエスト商品へコメントで質問する
+</div>
+<br>
+ただし、以下のサービスのご利用は有料会員のご登録をお願いいたします。
 
-ただし、以下のサービスのご利用は**月額350円**の**プレミアム会員登録**をお願いいたします。
-
-## プレミアム会員
-
-- 出品商品を無制限に引き取れる
-- リクエストに対してレスポンスがあった商品を無制限に引き取れる  
-
-## スタンダード会員  
-
-- 商品を出品する  
-- 欲しい商品をリクエストする  
-- リクエスト商品へレスポンスをする  
-- 出品商品・リクエスト商品へコメントで質問する  
-
-## 店舗掲載登録
-
-店舗掲載登録のご利用は**月額11,000円**の**店舗掲載料**がかかります。
-
-- 店舗様専用ページに広告として店舗掲載を掲載  
-- 出品商品を無制限に引き取れる  
-- リクエストに対してレスポンスがあった商品を無制限に引き取れる  
-- 利用ユーザー様が店舗情報を見て直接仕事を依頼  
-
-<span style="color: red; ">ご注意ください</span>
-
-<span style="color: blue; ">ご注意ください</span>
-
-<font color="Pink">ご注意ください</font>
-
-<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333;">
-   ご注意ください。
+## **プレミアム会員(月額350円)**
+プレミアム会員登録のご利用は<font color="#ff0000">月額350円</font>の<font color="#ff0000">プレミアム会員料</font>がかかります。
+<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #f5f5f5; background-color: #f5f5f5;">
+・出品商品を無制限に引き取れる<br>
+・リクエストに対してレスポンスがあった商品を無制限に引き取れる
 </div>
 
-<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #ffff99;">
-    ご注意ください。
+## **店舗掲載登録(月額11,000円)**
+店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。
+<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #f5f5f5; background-color: #f5f5f5;">
+・店舗様専用ページに広告として店舗掲載を掲載<br>
+・出品商品を無制限に引き取れる<br>
+・リクエストに対してレスポンスがあった商品を無制限に引き取れる<br>
+・利用ユーザー様が店舗情報を見て直接仕事を依頼
 </div>
