--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -1,51 +1,48 @@
-# コネポケで禁止されている出品物  
-
-## **法令に違反する・抵触する恐れがあるもの**  
-  
-## **法令で譲渡・所持が規制されているもの**  
-  
-**法令違反に抵触する恐れのあるもの**
-**主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します** 
+# コネポケで禁止されている出品物
+<hr>
+<font color="#ff0000"> <b>法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの</b> </font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+法令違反に抵触する恐れのあるもの
+主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
+</div>
 
 ## 【銃砲類、刀剣類】
-
-銃刀法違反にあたるもの  
-武器類とみなされるもの
+<font color="#ff0000">銃刀法違反にあたるもの<br>
+武器類とみなされるもの</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
-
-拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲  
+・拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 
 刀、ナイフ、包丁などで6cmを超えるもの
 
-違法改造物や殺傷能力のあるエアガン、モデルガン
+・違法改造物や殺傷能力のあるエアガン、モデルガン
 
-上記の製造、並びに改造に関するデータ
-
+上記の製造、並びに改造に関するデータ<br>
 ※法律上の許可、登録などがあっても投稿不可
+</div>
 
 ## 【薬物】
-
-覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの
+<font color="#ff0000">覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
-
-麻薬、あへん、覚せい剤、向精神薬などの薬物、大麻草や芥子などの植物
-
-毒物、劇物
+・麻薬、あへん、覚せい剤、向精神薬などの薬物、大麻草や芥子などの植物<br>
+・毒物、劇物<br>
+</div>
 
 ## 【盗難品・不正入手】
-
-盗品など犯罪行為や不正な経路で入手したもの
+<font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font>
 
 盗難・万引きしたもの、拾得したものや横領したもの、盗難品であることを知りながら出品する行為は窃盗罪、詐欺罪、盗品等関与罪および横領罪などの法律で厳しく処罰されます。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
-
-窃盗、強盗、詐欺、恐喝、横領などの犯罪行為により取得されたもの
+・窃盗、強盗、詐欺、恐喝、横領などの犯罪行為により取得されたもの
+</div>
 
 ## 【偽造品・偽ブランド品・レプリカ・模造品】
-
-偽造されているものや、偽ブランド品、正規品と確証のないもの
+<font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの
 
 第三者の知的財産権を侵害しているもの
 
@@ -56,93 +53,102 @@
 権利者から直接削除依頼があったもの
 
 偽物の可能性がある商品を見つけた場合は商品ページの「通報」からご連絡をお願いいたします。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-偽造貨幣、偽造カード、偽造印鑑、偽造文書
+・偽造貨幣、偽造カード、偽造印鑑、偽造文書
 
-ブランド品のロゴを許諾なく使用する商品など、他人の商標権を侵害するもの
+・ブランド品のロゴを許諾なく使用する商品など、他人の商標権を侵害するもの
 
-デザインやマークがブランド品やそのマークと酷似していると判断されるものや特定のブランドを想起させるもの
+・デザインやマークがブランド品やそのマークと酷似していると判断されるものや特定のブランドを想起させるもの
 
-ブランド品の全部または一部を加工したリメイク品や加工のための素材として出品されたもの
+・ブランド品の全部または一部を加工したリメイク品や加工のための素材として出品されたもの
 
-海賊版CD、DVD(個人的に複製したものを含む)や許諾なくキャラクターなどを使用したハンドメイド品など、他人の著作権を侵害するもの
+・海賊版CD、DVD(個人的に複製したものを含む)や許諾なくキャラクターなどを使用したハンドメイド品など、他人の著作権を侵害するもの
 
-コピーガードを回避するツールなど、不正競争防止法違反に該当するもの
+・コピーガードを回避するツールなど、不正競争防止法違反に該当するもの
 
-芸能人などの肖像権を侵害するもの
+・芸能人などの肖像権を侵害するもの
 
-テレビ・ラジオの録画録音テープ
+・テレビ・ラジオの録画録音テープ
 
 ※ハードディスクドライブ、フラッシュメモリなどの記憶媒体、ハードディスクレコーダーや、iPodなどの携帯型音楽端末等を出品する場合は、保存されている内容をすべて削除し、出品してください。
+</div>
 
 ## 【金券、有価証券】
 
-現金、金券類、カード類
+<font color="#ff0000">現金、金券類、カード類
 
 有形／電子を問わず、以下の商品類と、高額で金銭と同等に扱われるもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-有価証券、小切手、手形、株券
+・有価証券、小切手、手形、株券
 
-現行流通している国内外の貨幣、通貨、仮想通貨
+・現行流通している国内外の貨幣、通貨、仮想通貨
 
-チャージ済みのプリペイドカード類(Suica、楽天Edy、nanaco、WAONなど)
+・チャージ済みのプリペイドカード類(Suica、楽天Edy、nanaco、WAONなど)
 
-アカウント登録済みのオンラインギフト券 (iTunesカード、Amazonギフト券など)
+・アカウント登録済みのオンラインギフト券 (iTunesカード、Amazonギフト券など)
 
-記名済みの航空券
+・記名済みの航空券
 
-口座、クレジットカード、キャッシュカード
+・口座、クレジットカード、キャッシュカード
 
-預貯金や証券の口座、預貯金通帳
+・預貯金や証券の口座、預貯金通帳
 
-債券、小切手、未使用の切手(円)、収入印紙、登記印紙
+・債券、小切手、未使用の切手(円)、収入印紙、登記印紙
 
-宝くじ、勝馬投票券
+・宝くじ、勝馬投票券
 
-貴金属の地金（インゴット）
+・貴金属の地金（インゴット）
 
-その他、高額で金銭と同じ意味を持つもの
+・その他、高額で金銭と同じ意味を持つもの
 
 ※現在発行されていない過去の通貨・貨幣・コイン・古銭などは掲載可能
 
-販売・配布元企業により譲渡が禁止とされているもの
+・販売・配布元企業により譲渡が禁止とされているもの
 
-ゲームのアカウントやアイテムのデータ
+・ゲームのアカウントやアイテムのデータ
 
-サンプル盤、デモ盤として貸与されているCD、DVD、ソフト
+・サンプル盤、デモ盤として貸与されているCD、DVD、ソフト
 
-販促のために頒布しているポスター、パンフレット、看板
+・販促のために頒布しているポスター、パンフレット、看板
 
-販売・配布元により貸与しているもの（ゲームセンターのコイン、SIMカードなど）
+・販売・配布元により貸与しているもの（ゲームセンターのコイン、SIMカードなど）
 
-航空会社のマイレージ、その他各種ポイントカード、会員証
+・航空会社のマイレージ、その他各種ポイントカード、会員証
+</div>
 
 ## 【医薬品、医療機器】
 
-医薬品医療機器等法（以下「薬機法」）などの法令違反に抵触する恐れがあるもの
+<font color="#ff0000">医薬品医療機器等法（以下「薬機法」）などの法令違反に抵触する恐れがあるもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-＜全ての医薬品＞
+<b>・全ての医薬品</b>
 
-一般用医薬品
+・一般用医薬品
 
-要指導医薬品
+・要指導医薬品
 
-処方箋を要する医薬品などの医療用医薬品
+・処方箋を要する医薬品などの医療用医薬品
 
-漢方薬
+・漢方薬
 
-動物用医薬品全般
+・動物用医薬品全般
 
-海外製の医薬品（個人輸入品を含む）
+・海外製の医薬品（個人輸入品を含む）
 
-医薬品に該当する成分が含まれている製品
-
+・医薬品に該当する成分が含まれている製品
+</div>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffff99;">
 ＜医療機器＞
 
 医療機器の具体例についてはこちらをご覧ください。
@@ -169,142 +175,151 @@
 その他、薬機法に抵触するもの
 
 医薬品医療機器等法（薬機法）については こちら もご覧ください。
+</div>
 
 ## 【許認可のない化粧品類や美容品】
 
-許認可または手作りした化粧品類や美容品
+<font color="#ff0000">許認可または手作りした化粧品類や美容品
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-許認可のない手作りコスメ、化粧品、石鹸、シャンプー、コンディショナー、乳液など
+・許認可のない手作りコスメ、化粧品、石鹸、シャンプー、コンディショナー、乳液など
 
-製造番号・製造記号（ロットナンバー）や成分表示が、商品本体やその外箱に記載されていないまたは削られている化粧品類
+・製造番号・製造記号（ロットナンバー）や成分表示が、商品本体やその外箱に記載されていないまたは削られている化粧品類
 
-個人的に輸入した化粧品類
+・個人的に輸入した化粧品類
 
-小分けした化粧品、香水などの（小分け容器に移した物など）
+・小分けした化粧品、香水などの（小分け容器に移した物など）
 
-その他、販売・譲渡に許認可を要するもの全般
+・その他、販売・譲渡に許認可を要するもの全般
 
-その他、薬機法に抵触する化粧品類
+・その他、薬機法に抵触する化粧品類
 
-医薬品医療機器等法（薬機法）については こちら もご覧ください。
+・医薬品医療機器等法（薬機法）については こちら もご覧ください。
+</div>
 
 ## 【人体、臓器、細胞、血液】
-
-人体、臓器、細胞、血液またはそれに類するもの
-
+<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
+</font>
 ## 【密猟された動植物、販売禁止鳥獣】
-
-密猟された動植物、販売禁止鳥獣など
-
+<font color="#ff0000">密猟された動植物、販売禁止鳥獣など
+</font>
 ## 【法令に抵触する、悪用される恐れのあるもの】
-
-危険物や安全性に問題があるもの
+<font color="#ff0000">危険物や安全性に問題があるもの
 
 犯罪に使用される恐れのあるもの
 
 人体に危険を及ぼす可能性があるもの
 
 法令に抵触する状態に改造を施したもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-ピッキングツール、マスターキー、錠と一対になっていない鍵など
+・ピッキングツール、マスターキー、錠と一対になっていない鍵など
 
-盗聴器、超小型カメラ、赤外線カメラなど
+・盗聴器、超小型カメラ、赤外線カメラなど
 
-犯罪方法、テロ行為の手引き、爆発物や武器の製造方法などピッキング用具、その他の特殊開錠用具、開錠用の工具など
+・犯罪方法、テロ行為の手引き、爆発物や武器の製造方法などピッキング用具、その他の特殊開錠用具、開錠用の工具など
 
-ホワイトカード・ICチップ、データスキミング装置など
+・ホワイトカード・ICチップ、データスキミング装置など
 
-花火や火薬など
+・花火や火薬など
 
-PSマーク、PSCマークがないことで法令に抵触するもの
+・PSマーク、PSCマークがないことで法令に抵触するもの
 
-法令に抵触するレーザーポインター類
+・法令に抵触するレーザーポインター類
 
-法令に抵触するトランシーバーなど
+・法令に抵触するトランシーバーなど
 
-使用期限切れの化粧品類
+・使用期限切れの化粧品類
 
-開封済みの衛生用品など
+・開封済みの衛生用品など
 
-配送会社や警察、その他公的機関の制服類
+・配送会社や警察、その他公的機関の制服類
 
-その他、悪用されるおそれのある制服類
+・その他、悪用されるおそれのある制服類
 
-領収書
+・領収書
 
-免許証、パスポート、健康保険証など
+・免許証、パスポート、健康保険証など
 
-個人情報（ID・パスワードなど）、プライバシーに関する情報、それらの情報が含まれた媒体
+・個人情報（ID・パスワードなど）、プライバシーに関する情報、それらの情報が含まれた媒体
 
-機密情報
+・機密情報
 
-その他、犯罪や違法行為に使用されるとみなされるもの
+・その他、犯罪や違法行為に使用されるとみなされるもの
 
 2019年2月1日（金）以降は、PSEマークのないモバイルバッテリーは販売禁止（流通在庫を含む）となります。詳細は 経済産業省HP をご覧ください。
+</div>
 
 ## 【たばこ】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-たばこ、葉巻
+・たばこ、葉巻
 
-ニコチンが含まれる電子たばこ、リキッド
+・ニコチンが含まれる電子たばこ、リキッド
 
-その他ニコチンやタールが含まれるもの全般
+・その他ニコチンやタールが含まれるもの全般
+</div>
 
 ## 【食料品、飲料品、アルコール類】
-
-食料品、飲料品、アルコール類で以下に該当するもの
+<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
 
 出品時に賞味(消費)期限を商品説明に記載するか、記載部分の写真を掲載してください。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）
+・保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）
 
-賞味期限の切れた商品、開封済みの商品
+・賞味期限の切れた商品、開封済みの商品
 
-消費(賞味)期限の記載のない食品
+・消費(賞味)期限の記載のない食品
 
-１週間以内に消費（賞味）期限が切れる食品
+・１週間以内に消費（賞味）期限が切れる食品
 
-生の食肉、魚介類
+・生の食肉、魚介類
 
-取り扱いが難しい食品、保存期間が短い食品
+・取り扱いが難しい食品、保存期間が短い食品
 
-健康増進法に違反する食品
+・健康増進法に違反する食品
 
 ※食品を出品するには、食品衛生法および都道府県条例の規定に適合していなければなりません。
 
-食品衛生法（外部サイト）
+・食品衛生法（外部サイト）
 
-東京都の食品安全情報サイト（外部サイト）
+・東京都の食品安全情報サイト（外部サイト）
+</div>
 
 ## 【法令に抵触するサプリメント類】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-法令に抵触するサプリメント類
+・法令に抵触するサプリメント類
 
-医薬品に該当する成分が含まれているもの
+・医薬品に該当する成分が含まれているもの
 
-成分の形成で法令に抵触するもの
+・成分の形成で法令に抵触するもの
 
-薬効表現、標榜が法令に抵触するもの
+・薬効表現、標榜が法令に抵触するもの
 
-海外並行輸入品
+・海外並行輸入品
 
-その他、人体に危険を及ぼす可能性があるとみなされるもの
+・その他、人体に危険を及ぼす可能性があるとみなされるもの
 
-医薬品医療機器等法（薬機法）についてはこちらもご覧ください。
+・医薬品医療機器等法（薬機法）についてはこちらもご覧ください。
+</div>
 
 ## 【チケット類】
-
-記名式チケットや、個人情報の登録のあるチケット
+<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
 
 記名式の航空券
 
@@ -314,268 +329,293 @@ PSマーク、PSCマークがないことで法令に抵触するもの
 
 予約番号だけなど未払い状態のチケット
 
-その他、上記と同等とみなされるもの 
+その他、上記と同等とみなされるもの
+</font>
 
 ## 【象牙および希少野生動植物種の個体】
-
-象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
+<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-象牙の全形、カットピースおよび象牙の加工品全般
+・象牙の全形、カットピースおよび象牙の加工品全般
 
-希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの全般
+・希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの全般
 
-その他、法令に抵触するもの
+・その他、法令に抵触するもの
 
-種の保存法の対象となる動植物種は、環境省のホームページなどでご確認ください。
+・種の保存法の対象となる動植物種は、環境省のホームページなどでご確認ください。
+</div>
 
 ## 【危険なもの】
-
-発火性のあるもの
+<font color="#ff0000">発火性のあるもの
 
 武器として使用される恐れのあるもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-火薬、爆発物、灯油、ガソリン、各種高圧ガス、液化石油ガスなどの危険物
+・火薬、爆発物、灯油、ガソリン、各種高圧ガス、液化石油ガスなどの危険物
 
-ボーガン、スタンガン、スピアガン、スリングショット、改造エアガンやその部品など
+・ボーガン、スタンガン、スピアガン、スリングショット、改造エアガンやその部品など
 
-二節根、三節根、トンファー、手裏剣、ヌンチャク、ナックルガード、メリケンサック、特殊警棒など
+・二節根、三節根、トンファー、手裏剣、ヌンチャク、ナックルガード、メリケンサック、特殊警棒など
 
-催涙スプレーなど
+・催涙スプレーなど
+</div>
 
 ## 【農薬】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-届出のない者により出品された農薬
+・届出のない者により出品された農薬
 
-小分けされた農薬
+・小分けされた農薬
 
-農薬取締法に基づき販売が禁止された農薬
+・農薬取締法に基づき販売が禁止された農薬
 
-国内で登録されていない農薬
+・国内で登録されていない農薬
 
-ラベルが剥がれた農薬
+・ラベルが剥がれた農薬
 
-その他農薬取締法に抵触するもの
+・その他農薬取締法に抵触するもの
 
-販売の届出や販売が禁止されている農薬は、農林水産省のホームページなどでご確認ください。
+・販売の届出や販売が禁止されている農薬は、農林水産省のホームページなどでご確認ください。
+</div>
 
 ## 【危険ドラッグ】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-いわゆる脱法・合法ドラッグ、シンナーなどの有機溶剤・ガスなど
+・いわゆる脱法・合法ドラッグ、シンナーなどの有機溶剤・ガスなど
 
-精力剤、媚薬など
+・精力剤、媚薬など
 
 ※法令で販売・所持が規制されていなくても、本来と異なる用途を意図して販売することで、心身への影響が懸念される場合は投稿不可
+</div>
 
 ## 【自己名義でない・所有者の変更登録ができない】
-
-自己名義でないもの
+<font color="#ff0000">自己名義でないもの
 
 所有者の変更ができないまたは時間がかかるもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-自己名義以外・法人名義・残債がある・金融もの・抵当権がある・担保になっている
+・自己名義以外・法人名義・残債がある・金融もの・抵当権がある・担保になっている
 
-家族名義・その他、変更登録が出来ないとみなされるもの
+・家族名義・その他、変更登録が出来ないとみなされるもの
 
-上記に該当する以下のものは出品できません。
+・上記に該当する以下のものは出品できません。
 
-車・バイク・自転車・農業機械・船・ボート・ジェット・建設機械
-家・マンション・土地・田んぼ・畑・倉庫（登記している）
+・車、バイク、自転車、農業機械、船、ボート、ジェット、建設機械
+家、マンション、土地、田んぼ、畑、倉庫（登記している）
+</div>
 
-## `公序良俗、モラルに反するもの`
+## <b> <font color="#ff0000">公序良俗、モラルに反するもの</font> </b>
 
 ## 【18禁、アダルト関連、児童ポルノ】
-
-18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
+<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-性的描画、描写のあるもの
+・性的描画、描写のあるもの
 
-性的な表現のあるもの
+・性的な表現のあるもの
 
-裸姿、下着姿の描画、描写のあるもの
+・裸姿、下着姿の描画、描写のあるもの
 
-服装、肢体、タイトル、商品説明、作品内容などから、性的な姿態を連想させると弊社が総合的に判断した商品
+・服装、肢体、タイトル、商品説明、作品内容などから、性的な姿態を連想させると弊社が総合的に判断した商品
 
-アダルトDVD (BDなども含む)
+・アダルトDVD (BDなども含む)
 
-アダルトゲーム
+・アダルトゲーム
 
-アダルトグッズ類
+・アダルトグッズ類
 
-成人向け雑誌
+・成人向け雑誌
 
-R18指定のアダルト商品
+・R18指定のアダルト商品
 
-性的描画、描写のあるもの
+・性的描画、描写のあるもの
 
-性的な表現のあるもの
+・性的な表現のあるもの
 
-裸姿、下着姿の描画、描写のあるもの
+・裸姿、下着姿の描画、描写のあるもの
 
-その他、上記に該当するとみなされるもの
+・その他、上記に該当するとみなされるもの
 
-使用済みの下着類(クリーニング済みであっても同様とします)
+・使用済みの下着類(クリーニング済みであっても同様とします)
 
-試着や水通しを行った下着類
+・試着や水通しを行った下着類
 
-新品であることが証明できない下着類 
+・新品であることが証明できない下着類 
 
 　※セット商品の場合は各商品の商品タグをご掲載ください
 
-ブルセラ的な価値が上乗せされて出品、購入されていると判断されるもの
+・ブルセラ的な価値が上乗せされて出品、購入されていると判断されるもの
 
-記載内容、金額や着用画像の掲載などによりブルセラと誤認する可能性があると事務局が判断するもの
+・記載内容、金額や着用画像の掲載などによりブルセラと誤認する可能性があると事務局が判断するもの
 
-その他、上記に該当すると判断されるもの
+・その他、上記に該当すると判断されるもの
 
-使用済みの学用ブルマ
+・使用済みの学用ブルマ
 
-その他、上記と同等品と判断されるもの
+・その他、上記と同等品と判断されるもの
+</div>
 
 ## 【青少年の保護育成上好ましくないもの】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-低俗、わいせつな商品
+・低俗、わいせつな商品
 
-児童ポルノなど青少年の保護育成上好ましくないビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など
+・児童ポルノなど青少年の保護育成上好ましくないビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など
 
-[18禁」や「15禁」など、鑑賞に年齢規制などが課されているもの
+・[18禁」や「15禁」など、鑑賞に年齢規制などが課されているもの
 
-モデルの容姿、服装、肢体、タイトル、商品説明などを総合的に判断し、未成年者を連想させるような商品
+・モデルの容姿、服装、肢体、タイトル、商品説明などを総合的に判断し、未成年者を連想させるような商品
 
-法令に違反している商品（無修正ビデオ、裏ビデオなど）
+・法令に違反している商品（無修正ビデオ、裏ビデオなど）
 
-その他公序良俗に反すると当社が判断した商品
+・その他公序良俗に反すると当社が判断した商品
 
-性風俗店に関するもの
+・性風俗店に関するもの
 
-性風俗店の宣伝広告、チケットなど
+・性風俗店の宣伝広告、チケットなど
 
-性風俗店への勧誘や同行行為
+・性風俗店への勧誘や同行行為
 
-避妊具・アダルトグッズ
+・避妊具・アダルトグッズ
 
-コンドームなどの避妊具
+・コンドームなどの避妊具
 
-アダルトグッズやそれに類する商品
+・アダルトグッズやそれに類する商品
 
-反社会的なもの、犯罪に関連する恐れのあるもの
+・反社会的なもの、犯罪に関連する恐れのあるもの
 
-暴力表現、犯罪表現を含むビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など
+・暴力表現、犯罪表現を含むビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など
 
-盗撮写真、盗撮ビデオ、盗聴テープなど無断で密かに採取された記録・情報・データなど
+・盗撮写真、盗撮ビデオ、盗聴テープなど無断で密かに採取された記録・情報・データなど
 
-犯罪性の高いものおよび犯罪を誘発するおそれのあるもの
+・犯罪性の高いものおよび犯罪を誘発するおそれのあるもの
 
-交通取締を免れる目的の商品など、脱法目的に利用される商品
+・交通取締を免れる目的の商品など、脱法目的に利用される商品
 
-暴力団、不良集団、テロ組織、暴走族などに関係する商品
+・暴力団、不良集団、テロ組織、暴走族などに関係する商品
 
-反社会的なものまたはその可能性があると当社が判断した商品
+・反社会的なものまたはその可能性があると当社が判断した商品
+</div>
 
 ## 【不衛生なもの・不快感を与えるもの】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-汚物、排泄物、廃棄物、動物死体、清潔でない商品、その他の不潔なもの
+・汚物、排泄物、廃棄物、動物死体、清潔でない商品、その他の不潔なもの
 
-死体写真・画像のようなグロテスクな商品、その他嫌悪感・不快感を与えるもの
+・死体写真・画像のようなグロテスクな商品、その他嫌悪感・不快感を与えるもの
+</div>
 
-## `その他、コネポケが不適切と判断したもの`
+## <b>その他、コネポケが不適切と判断したもの</b>
 
 ## 【生体・ぺット】
 
-全ての生体
+・全ての生体
 
-投稿時点で生まれていない生体
+・投稿時点で生まれていない生体
 
 ## 【物品ではないもの】
-
-ゲームアカウントやゲーム内の通貨
+<font color="#ff0000">ゲームアカウントやゲーム内の通貨
 
 アイテムなどの電子データ
 
 情報、サービスの提供など
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-オンラインゲームの電子データ
+・オンラインゲームの電子データ
 
-情報商材（ノウハウや情報の提供）、スキルシェアその他のサービス、役務など 
+・情報商材（ノウハウや情報の提供）、スキルシェアその他のサービス、役務など 
 MLM(マルチレベルマーケティング)商品
 
-宿題や自由研究、論文など、本来自らが行うべき行為の他者による代行・代筆（完成品を含む）
+・宿題や自由研究、論文など、本来自らが行うべき行為の他者による代行・代筆（完成品を含む）
 
-懸賞、チャリティを謳ったもの
+・懸賞、チャリティを謳ったもの
 
-アカウント（ID） ※SNSなどサービスの種類を問わず
+・アカウント（ID） ※SNSなどサービスの種類を問わず
 
-コンピュータウイルスなど
+・コンピュータウイルスなど
 
-個人情報に該当するものなど
+・個人情報に該当するものなど
 
-違法行為・脱税につながる売買、公序良俗を乱す商品売買、その他、事務局にて不適切と判断した売買など
+・違法行為・脱税につながる売買、公序良俗を乱す商品売買、その他、事務局にて不適切と判断した売買など
+</div>
 
 ## 【手元にないもの】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-商品が手元にない
+・商品が手元にない
 
-取り寄せが必要な商品
+・取り寄せが必要な商品
 
-発売前、公開前で手元にないとみなされるもの
+・発売前、公開前で手元にないとみなされるもの
 
-その他、手元にないと判断されるもの
+・その他、手元にないと判断されるもの
+</div>
 
 ## 【福袋 (内包される商品の名称や写真がないもの)】
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-いくつかの商品の中から複数の商品をランダムで組み合わせ、セット内容が不透明な商品
+・いくつかの商品の中から複数の商品をランダムで組み合わせ、セット内容が不透明な商品
 
-セット商品において、掲載画像から実際の商品内容が特定できないもの
+・セット商品において、掲載画像から実際の商品内容が特定できないもの
 
-その他、商品の内容が不透明、不明瞭なもの
+・その他、商品の内容が不透明、不明瞭なもの
+</div>
 
 ## 【携帯電話端末について】
-
-アクティベーションロックやネットワーク利用制限のかかった携帯端末
+<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
 
 残債がある携帯端末、契約中の携帯端末
 
 出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。
 
 残債がある、契約中である、名義を変更できないものは、トラブルの原因となるため、お取引をご遠慮ください。
+</font>
+<div style="padding: 10px; margin-bottom: 10px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-アクティベーションロックが解除されていないもの
+・アクティベーションロックが解除されていないもの
 
-ネットワーク利用制限がかかっているもの
+・ネットワーク利用制限がかかっているもの
 
-完済していることが明確に証明されていないもの
+・完済していることが明確に証明されていないもの
 
-解約前のプリペイド式携帯電話
+・解約前のプリペイド式携帯電話
 
-その他、上記と同等とみなされるもの
+・その他、上記と同等とみなされるもの
 
-利用制限のかかった携帯電話
+・利用制限のかかった携帯電話
 
-契約者名義の変更を前提としない通話可能な携帯電話
-
+・契約者名義の変更を前提としない通話可能な携帯電話
+</div>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffff99;">
 ※ソフトバンクモバイル株式会社（以下、ソフトバンクモバイル）および株式会社エヌ・ティ・ティ・ドコモ（以下、ドコモ）が販売する携帯電話機を出品する際は製造番号を問い合わせユーザー様に開示してください。（投稿内に製造番号を記載する必要はございません。）
 
 ＜下記のご案内をしています＞
@@ -591,29 +631,32 @@ MLM(マルチレベルマーケティング)商品
 ・ドコモ： ドコモ ネットワーク利用制限携帯電話機確認サイト
 
 ・KDDI：ネットワーク利用制限携帯電話機について
+</div>
 
 ## 【事務局で不適切と判断されるもの】
-
-以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
+<font color="#ff0000">以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反商品
 
-ハードウェアウォレット
+・ハードウェアウォレット
 
-その他、違法物全般
+・その他、違法物全般
 
-トラブルの原因になるとみなされるもの
+・トラブルの原因になるとみなされるもの
 
-いたずら出品とみなされるもの
+・いたずら出品とみなされるもの
 
-違法行為、違法商品の販売などの幇助にあたると判断するもの
+・違法行為、違法商品の販売などの幇助にあたると判断するもの
 
-利用規約に抵触するとみなされるもの
+・利用規約に抵触するとみなされるもの
 
-当社のシステムに悪影響を及ぼす可能性のある商品
+・当社のシステムに悪影響を及ぼす可能性のある商品
 
-スクリプトを使用するなどして当社のシステムに悪影響を及ぼす可能性のあるソフトウェア、その他サービスの運営を妨げるおそれのある商品
+・スクリプトを使用するなどして当社のシステムに悪影響を及ぼす可能性のあるソフトウェア、その他サービスの運営を妨げるおそれのある商品
 
-販売に際して法令で義務づけられている許認可や資格条件を満たしていない商品など規約に反する可能性のもの
+・販売に際して法令で義務づけられている許認可や資格条件を満たしていない商品など規約に反する可能性のもの
 
-その他、コネポケが取扱いを不適切と判断したもの
+・その他、コネポケが取扱いを不適切と判断したもの
+</div>
