--- a/1.コネポケ公式ガイド/ルールとマナー/2.コネポケで禁止されている行為.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/2.コネポケで禁止されている行為.md
@@ -1,20 +1,23 @@
 # コネポケで禁止されている行為
+<hr>
+<font color="#ff0000">コネポケを安心・安全にご利用いただくため、コネポケの<b>「禁止されている行為」</b>をご確認ください。
+</font>
 
-コネポケを安心・安全にご利用いただくため、コネポケの「**禁止されている行為**」をご確認ください。
-
-`### 禁止行為が確認された場合はアカウントの停止などの対応をさせていただきます。`
+### <b>禁止行為が確認された場合はアカウントの停止などの対応をさせていただきます。</b>
 
 以下のような行為を見かけた、持ちかけられた場合は、コネポケ事務局にご連絡ください。
 
 ## 【商品の取引全般】
 
 ## コネポケで用意された以外の取引手段を利用および促すこと
-
-コネポケでは、本人確認を行いプレミアム会員に登録することで安全な取引方法をご用意しています。
+<hr>
+<font color="#ff0000">コネポケでは、本人確認を行いプレミアム会員に登録することで安全な取引方法をご用意しています。
 
 コネポケを利用せずに取引をした場合、相手の素性が分からない、または商品に対してお金を要求された、
 
 個人情報を悪用されたなどのトラブルになってしまう危険性があります。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為 (持ちかける行為と受入れる行為)
 
@@ -24,7 +27,7 @@
 
 ・有料での商品の取引の交渉
 
-`※コネポケは無料で「あげたり」「もらったり」するサービスです。商品の有料での取引きはユーザー様同士の合意があった場合でもお控えください。`
+<font color="#ff0000"> <b>※コネポケは無料で「あげたり」「もらったり」するサービスです。商品の有料での取引きはユーザー様同士の合意があった場合でもお控えください。</b> </font>
 
 ・出品者が指定する口座への直接振込
 
@@ -35,30 +38,38 @@
 ・キャンセル料、取り置き料などの要求
 
 ・条件が合わない相手にしつこく取引きを要求する行為
+</div>
 
 ## 外部サイトの取引にコネポケを利用すること
-
-無関係な外部サイトなどの取引にコネポケを利用することを禁止します。
+<hr>
+<font color="#ff0000">無関係な外部サイトなどの取引にコネポケを利用することを禁止します。
+</font>
 
 ## 禁止されている行為や出品物と知りながら取引すること
-
-利用規約やコネポケで禁止されている行為や出品物を見かけた場合には、商品画面の「通報」から事務局にご連絡ください。
+<hr>
+<font color="#ff0000">利用規約やコネポケで禁止されている行為や出品物を見かけた場合には、商品画面の「通報」から事務局にご連絡ください。
+</font>
 
 ## 【商品の出品】
 
 ## 譲渡にあたり、法令上許可・届出・免許等が必要な商品について、許可・届出・免許等なく当該商品を出品すること。
-
-また、許可・届出等なく製造された商品を出品することも禁止します。
+<hr>
+<font color="#ff0000">また、許可・届出等なく製造された商品を出品することも禁止します。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
 ・酒税法による酒類販売業の免許を受けずに、継続的に酒類を出品する行為
 
 ・食品衛生法及び各地方公共団体の条例による保健所の営業許可を受けずに、許可が必要な食品類を出品する行為
+</div>
 
 ## 実物の商品画像を掲載せず出品すること
-
-引取前に実物の状態を十分確認できるよう、手元にある商品の画像を掲載してください。
+<hr>
+<font color="#ff0000">引取前に実物の状態を十分確認できるよう、手元にある商品の画像を掲載してください。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -69,14 +80,18 @@
 ・画質が粗いなどで商品の把握ができない
 
 ・上記に該当するとみなされるもの
+</div>
 
 ## 手元にない商品を出品すること
-
-取引成立後に手元に商品がないことによる取引キャンセルや配送の遅延によるトラブルを避けるため、手元にある商品のみ出品することが可能です。
+<hr>
+<font color="#ff0000">取引成立後に手元に商品がないことによる取引キャンセルや配送の遅延によるトラブルを避けるため、手元にある商品のみ出品することが可能です。
+</font>
 
 ## 商品でない情報の投稿（宣伝や探し物にあたる行為）
-
-宣伝とみなされる出品や商品としての体裁を成していない出品は禁止します。
+<hr>
+<font color="#ff0000">宣伝とみなされる出品や商品としての体裁を成していない出品は禁止します。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -85,10 +100,13 @@
 ・ゴミ
 
 ・壊れていて使いみちのない物
+</div>
 
 ## 商品に問題があっても返品に応じないという記載をすること
-
-記載箇所、投稿箇所にかかわらず、商品に問題があっても返品に応じないという記載をすることを禁止します。
+<hr>
+<font color="#ff0000">記載箇所、投稿箇所にかかわらず、商品に問題があっても返品に応じないという記載をすることを禁止します。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な記載例
 
@@ -107,18 +125,23 @@
 商品の引取に行ったけど壊れていたからいらないと言う相手に、無理に商品を引き取らせるような行為は禁止しています。
 
 トラブルにならないためにも、コメントや取引メッセージでしっかりと商品の詳細を伝え、お互いに納得したうえで取引を進めてください。
+</div>
 
 ## 虚偽、または誤った情報を記載、設定すること
-
-出品者や引取希望者を欺いたり、誤解を生じるような記載を禁止します。
+<hr>
+<font color="#ff0000">出品者や引取希望者を欺いたり、誤解を生じるような記載を禁止します。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
 ・虚偽の商品説明や誤解を生じるような記載
 
 ・正しい商品状態でない商品説明や設定
+</div>
 
 ## 他のユーザーに誤解や迷惑を与える出品や取引をすること
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -133,14 +156,17 @@
 ・福袋(中身のわからない物)
 
 ・譲渡するつもりのない商品を出品する行為
+</div>
 
 ## 【商品の引取】
 
 ## 引取りをする意思がなく取引を申し込むこと
+<hr>
+<font color="#ff0000">引取りをする意思がなく取引を申し込むことを禁止します。
 
-引取りをする意思がなく取引を申し込むことを禁止します。
-
-また、コメントで商品の詳細を確認せずむやみに`「取引申し込み」`をすることはお控えください。
+また、コメントで商品の詳細を確認せずむやみに「取引申し込み」をすることはお控えください。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -153,10 +179,13 @@
 ・引取り場所や待ち合わせ場所に行かない行為
 
 ・悪質な場合はアカウント停止などの対応を行います。
+</div>
 
 ## 【リクエスト】
 
 ## 常識から逸脱した商品をリクエストをすること
+<hr>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -167,24 +196,27 @@
 ・何か分からない写真を掲載してリクエストをすること
 
 ・欲しくもない商品をイタズラでリクエストすること
+</div>
 
 ## 【商品の配送】
 
 ## 取引メッセージで決めた以外の方法で配送をすること
-
-商品の配送については配送料が発生するため、お互いに認識を一致させることをお勧めします。
+<hr>
+<font color="#ff0000">商品の配送については配送料が発生するため、お互いに認識を一致させることをお勧めします。
 
 ※配送については、自己責任ですのでコネポケでサポートや対応は一切しておりません。
-
+</font>
 ## 【その他】
 
 ## 外部サービスなどに誘導する行為
-
-あらゆるトラブルを防止するため、コネポケ以外のサイトなどへ誘導する行為全般を禁止します。
+<hr>
+<font color="#ff0000">あらゆるトラブルを防止するため、コネポケ以外のサイトなどへ誘導する行為全般を禁止します。
 
 外部での取引については事務局でのサポート対象外となります。
 
 外部での取引やメッセージのやりとりを求められたらすぐに事務局にご連絡ください。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -205,12 +237,15 @@
 ・商品画像などにQRコードなどの画像を掲載する行為
 
 ・事務局で不適切、不健全と判断したサイトへの誘導
+</div>
 
 ## 迷惑行為
-
-お客さまの利用やサービスの運営の妨げになる迷惑行為を禁止します。
+<hr>
+<font color="#ff0000">お客さまの利用やサービスの運営の妨げになる迷惑行為を禁止します。
 
 お客さまの安心・安全のために、以下の行為を発見した場合はアカウント停止などの対応を行います。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -227,12 +262,15 @@
 ・募金を募る行為
 
 ・著作権の侵害
+</div>
 
 ## 公序良俗、モラルに反する内容の投稿やコメントを行うこと
-
-安心・安全な取引および青少年保護・育成および衛生上の観点から、以下の行為を禁止し、
+<hr>
+<font color="#ff0000">安心・安全な取引および青少年保護・育成および衛生上の観点から、以下の行為を禁止し、
 
 発見した場合はアカウント停止などの対応を行います。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -247,16 +285,20 @@
 ・その他、低俗、わいせつであるとみなされること
 
 ・その他、出品内容、記載内容などによりブルセラと誤認する可能性があると事務局が判断するもの
+</div>
 
 ## 当社が提供するインターフェイスとは別の手法を用いてサービスにアクセスすること
-
-コネポケでは、自動出品ツール、ならびにそれと同じとみなされるツールなどを用いての利用を禁止します。
+<hr>
+<font color="#ff0000">コネポケでは、自動出品ツール、ならびにそれと同じとみなされるツールなどを用いての利用を禁止します。
+</font>
 
 ## 事務局で不適切と判断される行為
-
-以下に該当する行為やその他事務局の判断により不適切とみなされる行為は禁止します。
+<hr>
+<font color="#ff0000">以下に該当する行為やその他事務局の判断により不適切とみなされる行為は禁止します。
 
 これらの行為を発見した場合は、ご利用の制限や出品・投稿の削除をいたします。
+</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 
 ### ■主な違反行為
 
@@ -298,7 +340,7 @@
 
 ・広告や宣伝を目的とした行為
 
-###【他のユーザーまたは第三者に損害を与える行為】
+### 【他のユーザーまたは第三者に損害を与える行為】
 
 ・当社、他のユーザーまたは第三者に不利益、損害を与える行為
 
