--- a/1.コネポケ公式ガイド/ルールとマナー/8.ドタキャンされました.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/8.ドタキャンされました.md
@@ -1,4 +1,5 @@
 # ドタキャンされました
-
-不適切な対応をされるユーザーがいらっしゃる場合、相手ユーザーを特定させていただくため商品画面の`［通報］`から詳細をお知らせください。  
+<hr>
+不適切な対応をされるユーザーがいらっしゃる場合、相手ユーザーを特定させていただくため商品画面の<font color="#ff0000">［通報］</font>から詳細をお知らせください。 
+ 
 悪質なユーザーの場合はアカウント停止などを検討させていただきます。  
