--- a/1.コネポケ公式ガイド/ルールとマナー/11.通報を報告されているユーザーについて.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/11.通報を報告されているユーザーについて.md
@@ -1,17 +1,18 @@
 # 通報を報告されているユーザーについて
 
-コネポケを安心・安全にご利用いただくために、規約違反やルール・マナー違反で通報を報告されているユーザーはコネポケ事務局で事実確認のうえ厳正な判断の基、警告・アカウント停止・刑事告訴などの対応をしております。  
+<font color="#ff0000">コネポケを安心・安全にご利用いただくために、規約違反やルール・マナー違反で通報を報告されているユーザーはコネポケ事務局で事実確認のうえ厳正な判断の基、警告・アカウント停止・刑事告訴などの対応をしております。  
 通報を報告さているユーザー名の問合せ、公開はしておりません。
+</font>
 
-規約違反や迷惑行為などをされたり、発見した場合、問題発生となった対象商品ページより「通報」ください。
+規約違反や迷惑行為などをされたり、発見した場合、問題発生となった対象商品ページより<font color="#ff0000">「通報」</font>ください。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+【通報できる内容】
 
-    【通報できる内容】
-
-    ・不適切なコメント
-    ・規約に違反する出品
-    ・規約に違反する行為
-    ・法令違反の報告
-    ・悪質ユーザーの報告
-    ・その他
+・不適切なコメント<br>
+・規約に違反する出品<br>
+・規約に違反する行為<br>
+・法令違反の報告<br>
+・悪質ユーザーの報告<br>
+・その他</div>
 
 コネポケ事務局にて内容を確認されていただき、適切に対応いたします。  
