--- a/1.コネポケ公式ガイド/ルールとマナー/3.禁止出品物をみつけたら.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/3.禁止出品物をみつけたら.md
@@ -1,5 +1,6 @@
 # 禁止出品物をみつけたら
-
-禁止出品物を見つけたら対象商品の商品ページから通報を行なってください。
+<hr>
+<font color="#ff0000">禁止出品物を見つけたら対象商品の商品ページから通報を行なってください。
+</font>
 
 コネポケ事務局にて内容を確認されていただき、適切に対応いたします。
