--- a/1.コネポケ公式ガイド/ルールとマナー/7.不快な問い合わせへの対処について.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/7.不快な問い合わせへの対処について.md
@@ -1,13 +1,13 @@
 # 不快な問い合わせへの対処について
-
-不快な問い合わせやコメントをされた場合は対象商品ページより「通報」ください。  
-
-    ・不適切なコメント
-    ・規約に違反する出品
-    ・規約に違反する行為
-    ・法令違反の報告
-    ・悪質ユーザーの報告
-    ・その他
-
+<hr>
+不快な問い合わせやコメントをされた場合は対象商品ページより<font color="#ff0000">「通報」</font>ください。  
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+・不適切なコメント<br>
+・規約に違反する出品<br>
+・規約に違反する行為<br>
+・法令違反の報告<br>
+・悪質ユーザーの報告<br>
+・その他<br>
+</div>
 コネポケ事務局にて内容を確認されていただき、適切に対応いたします。  
 ※表現や言葉の違いにより事務局での判断が難しい場合、コメントの削除ができない場合がございますので、ご了承ください。  
