--- a/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
@@ -1,19 +1,19 @@
-# コネポケについて  
+# コネポケについて
+<hr>
 
-## コネポケの特徴
+## <b>コネポケの特徴</b>
 
-### 「世界からゴミをなくそう」
-
-「大切にしていた物を次の誰かへ」
-
-「捨てたいけど捨てられない」  
-「捨てるのことができないから誰かに使って欲しい」  
-「捨て方が分からない」  
-「捨てるのにお金がかかる」
+<font color="#ff0000">
+「世界からゴミをなくそう」<br>
+「大切にしていた物を次の誰かへ」<br>
+「捨てたいけど捨てられない」<br>
+「捨てるのことができないから誰かに使って欲しい」<br>
+「捨て方が分からない」<br>
+「捨てるのにお金がかかる」</font> <br>
 
 色々な事情があって処分に困っている方は大勢いると思います。
 
-人の人生と同じように、**「物」**にも思い出や物語がたくさんあります。
+<font color="#0000ff">人の人生と同じように、「物」にも思い出や物語がたくさんあります。</font>
 
 「初めての給料で買った」「人からもらった」「産まれた時からずっと使っていた」「何年間も生活の一部であった」「恋人と使った」
 
@@ -23,14 +23,15 @@
 
 そんな時に捨てることなく、もし誰かが今後大切に使ってくれたら素敵なことですよね。
 
-「手放す方」も「引き継ぐ方」もどちらも幸せな気持ちになれます。
+<font color="#ff8c00">「手放す方」も「引き継ぐ方」もどちらも幸せな気持ちになれます。</font>
 
-そんなお手伝いができればと思い、誰でも簡単にやり取りができるコネポケを開発しました。
+そんなお手伝いができればと思い、誰でも簡単にやり取りができるコネポケを開発しました。<br>
 
-## コネポケの名前の由来
+## <b>コネポケの名前の由来</b>
 
-### コネクトポケットconnect pocketの略です。
+コネクトポケット<b>connect pocket</b>の略です。
 
-### コネクト（繋がる）ポケット（色々な物が入る）
+コネクト（繋がる）<br>
+ポケット（色々な物が入る）
 
-### 「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。
+「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。
