--- a/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
@@ -1,5 +1,7 @@
 # 問い合わせについて
+<hr>
 
-## まずは、ガイド＆ヘルプをお読みください。
+## <font color="#ff0000">まずは、ガイド＆ヘルプをお読みください。</font>
 
-ご確認いただいても解決しない場合は、【お問い合せ】より、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+ご確認いただいても解決しない場合は、<br>
+<b>【お問い合せ】</b>より、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
