--- a/1.コネポケ公式ガイド/初めての方へ/5.安全な取引を行うために.md
+++ b/1.コネポケ公式ガイド/初めての方へ/5.安全な取引を行うために.md
@@ -1,8 +1,8 @@
 # 安全な取引を行うために
+<hr>
 
 ## 安全に取引を行うための注意事項
-
-***
+<hr>
 
 取引はユーザー様同士の責任で行なっていただいております。  
 いかなるトラブルが発生した際も、ユーザー様同士での解決を行なっていただいております。
@@ -12,37 +12,31 @@
 成立後の取引メッセージでは引取方法の詳細を確認してください。  
 不安なことや、心配なことがあれば、取引前に取引メッセージで詳しく確認しましょう。  
 
-相手とのやり取りに`「不安」「怪しい」`と感じた場合は取引を中止しましょう。
+相手とのやり取りに<font color="#ff0000"> <b>「不安」「怪しい」</b> </font>と感じた場合は取引を中止しましょう。
 
 ## ■自宅や待ち合わせ場所で取引を行う場合
-
-・家族や友人に立会いをしてもらいましょう。
-
-・人気のない場所での取引は控えるようにしましょう。
-
-・公共の場を待ち合わせ場所にしましょう。
-
-・どこで、いつ取引を行うか、家族や友人に伝えておきましょう。
-
-・携帯電話など、すぐに連絡がとれる通信機器を持参しましょう。
-
-・身の危険を感じた場合は、すぐに警察や身の回りの人に連絡しましょう。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+・家族や友人に立会いをしてもらいましょう。<br>
+・人気のない場所での取引は控えるようにしましょう。<br>
+・公共の場を待ち合わせ場所にしましょう。<br>
+・どこで、いつ取引を行うか、家族や友人に伝えておきましょう。<br>
+・携帯電話など、すぐに連絡がとれる通信機器を持参しましょう。<br>
+・身の危険を感じた場合は、すぐに警察や身の回りの人に連絡しましょう。<br>
+</div>
 
 ## ■配送で取引を行う場合
 
-配送でのトラブルを防止するため、取引メッセージで以下の内容の確認を行なってください。
-
-・配送の負担について
-
-・配送の代金について
-
-・配送業者の確認
-
-・梱包の仕方について
+<font color="#ff0000">配送でのトラブルを防止するため、取引メッセージで以下の内容の確認を行なってください。</font>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+・配送の負担について<br>
+・配送の代金について<br>
+・配送業者の確認<br>
+・梱包の仕方について<br>
+</div>
 
 ## 禁止出品物のチェック
 
-***
+<hr>
 
 コネポケでは24時間体制で禁止出品物のチェックをしています。  
 コネポケ事務局の監視とユーザー様からの通報により、禁止出品物は発見次第削除しています。  
@@ -50,7 +44,7 @@
 
 ## 捜査機関や公的機関との連携
 
-***
+<hr>
 
 コネポケは犯罪防止のため捜査機関や公的機関に協力をしております。  
 また情報提供の依頼があった際には、適切な手順により情報提供などを行います。  
