--- a/1.コネポケ公式ガイド/ルールとマナー/12.商品の取り扱いについて.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/12.商品の取り扱いについて.md
@@ -2,9 +2,8 @@
 <hr>
 無料で誰かにあげる物でも、引き取っていただける方が今後大切に使う商品です。
 
-## ■以下の内容を必ずご確認ください。
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>■以下の内容を必ずご確認ください。</h2></div>
 
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
 ⑴ 付属品などの確認、汚れなどを落としてキレイにしてください。
 
 ⑵ 衣料品は全て洗濯をしてください。
@@ -14,4 +13,4 @@
 ⑷ 動作確認を行なってください。
 
 ⑸ 賞味期限・消費期限をご確認ください。
-</div>
+<hr>
