--- a/1.コネポケ公式ガイド/ルールとマナー/6.事務局削除・警告について.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/6.事務局削除・警告について.md
@@ -5,7 +5,7 @@
 </font>
 
 コネポケ事務局の監視とユーザー様からの通報により、以下の内容を発見した場合は削除いたします。
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #dcdcdc;">
 ・誹謗中傷<br>
 ・個人情報<br>
 ・暴言、荒らしなどの迷惑行為<br>
@@ -14,4 +14,5 @@
 </div>
 悪質な違法行為を行なったユーザーについては、警告およびアカウント停止の措置をとらせていただきます。  
 
-なお、コネポケの監視やユーザー様からの通報により法令違反を発見した場合は、警察への通報を行い捜査に協力いたします。  
+なお、コネポケの監視やユーザー様からの通報により法令違反を発見した場合は、警察への通報を行い捜査に協力いたします。
+<hr>
