--- a/1.コネポケ公式ガイド/ルールとマナー/7.不快な問い合わせへの対処について.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/7.不快な問い合わせへの対処について.md
@@ -1,7 +1,8 @@
 # 不快な問い合わせへの対処について
 <hr>
 不快な問い合わせやコメントをされた場合は対象商品ページより<font color="#ff0000">「通報」</font>ください。  
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+<h2>【通報できる内容】</h2>
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #dcdcdc;">
 ・不適切なコメント<br>
 ・規約に違反する出品<br>
 ・規約に違反する行為<br>
@@ -9,5 +10,7 @@
 ・悪質ユーザーの報告<br>
 ・その他<br>
 </div>
-コネポケ事務局にて内容を確認されていただき、適切に対応いたします。  
-※表現や言葉の違いにより事務局での判断が難しい場合、コメントの削除ができない場合がございますので、ご了承ください。  
+コネポケ事務局にて内容を確認されていただき、適切に対応いたします。
+
+<font color="#ff0000">※表現や言葉の違いにより事務局での判断が難しい場合、コメントの削除ができない場合がございますので、ご了承ください。</font>
+<hr>
