--- a/1.コネポケ公式ガイド/ルールとマナー/5.迷惑行為・荒らし行為について.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/5.迷惑行為・荒らし行為について.md
@@ -1,14 +1,16 @@
 # 迷惑行為・荒らし行為について
 <hr>
 <font color="#ff0000">迷惑行為や荒らし行為に該当するコメントをされたり、発見した場合、問題のあるコメントが書かれている対象商品ページより「通報」ください。</font>
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
-【通報できる内容】
 
+<h2>【通報できる内容】</h2>
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #dcdcdc;">
 ・不適切なコメント<br>
 ・規約に違反する出品<br>
 ・規約に違反する行為<br>
 ・法令違反の報告<br>
 ・悪質ユーザーの報告<br>
-・その他</div>
+・その他
+</div>
 
 コネポケ事務局にて内容を確認されていただき、適切に対応いたします。
+<hr>
