--- a/1.コネポケ公式ガイド/ルールとマナー/9.取引をした商品が故障していました.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/9.取引をした商品が故障していました.md
@@ -1,5 +1,7 @@
 # 取引をした商品が故障していました
 <hr>
-お取引した商品の故障・破損・不具合についてのクレームはコネポケ事務局は一切関与しておりません。  
+<font color="#ff0000">お取引した商品の故障・破損・不具合についてのクレームはコネポケ事務局は一切関与しておりません。  
 
-双方で話し合い、問題の解決を行なってくださいますよう、お願いいたします。  
+双方で話し合い、問題の解決を行なってくださいますよう、お願いいたします。
+</font>
+<hr>
