--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -1,30 +1,27 @@
-<h1>利用料について</h1>
+# 利用料について
 <hr>
-<font color="#0000ff">［登録］［出品］［レスポンス］</font>のご利用は無料です。
-<h2> <b>スタンダード会員(無料)</b> </h2>
-
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+<font color="#0000ff">［登録］［出品］［レスポンス］</font>のご利用は<font color="#ff0000"><b>無料</b></font>です。
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■スタンダード会員(無料)</h3></div>
 ・商品を出品する<br>
-・欲しい商品をリクエストする<br>
+・出品商品を引き取る（お試し1回）<br>
+・欲しい商品をリクエストする（お試し1回）<br>
 ・リクエスト商品へレスポンスをする<br>
 ・出品商品・リクエスト商品へコメントで質問する
-</div>
-ただし、以下のサービスのご利用は有料会員のご登録をお願いいたします。
+<hr>
 
-<h2> <b>プレミアム会員(月額350円)</b> </h2>
-
+<font color="#ff0000">ただし、以下のサービスのご利用は有料会員のご登録をお願いいたします。</font>
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■プレミアム会員(月額350円)</h3></div>
 プレミアム会員登録のご利用は<font color="#ff0000">月額350円</font>の<font color="#ff0000">プレミアム会員料</font>がかかります。
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+
 ・出品商品を無制限に引き取れる<br>
 ・リクエストに対してレスポンスがあった商品を無制限に引き取れる
-</div>
 
-<h2> <b>店舗掲載登録(月額11,000円)</b> </h2>
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■店舗掲載登録(月額11,000円)</h3></div>
 
 店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+
 ・店舗様専用ページに広告として店舗掲載を掲載<br>
 ・出品商品を無制限に引き取れる<br>
 ・リクエストに対してレスポンスがあった商品を無制限に引き取れる<br>
 ・利用ユーザー様が店舗情報を見て直接仕事を依頼
-</div>
+<hr>
