--- a/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
@@ -1,7 +1,8 @@
 # 問い合わせについて
 <hr>
 
-## <font color="#ff0000">まずは、ガイド＆ヘルプをお読みください。</font>
+### <font color="#ff0000">まずは、ガイド＆ヘルプをお読みください。</font>
 
 ご確認いただいても解決しない場合は、<br>
 <b>【お問い合せ】</b>より、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+<hr>
