--- a/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
@@ -1,25 +1,24 @@
 # 出品の流れ  
-
+<hr>
 出品するには会員登録、ログインが必要です
 
-1. ホーム画面の［出品する］ボタン、またはサイドメニューにある［出品する］をタップする
+⑴ ホーム画面の［出品する］ボタン、またはサイドメニューにある［出品する］をタップする
 
-1. 出品画面より商品写真を登録してください。  
+⑵ 出品画面より商品写真を登録してください。  
 カメラのアイコンを押すと、そのまま撮影することもできますし、アルバムから保存済みの写真を選択することもできます。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+・写真は4枚まで掲載できます。
 
-   - 写真は4枚まで掲載できます。
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+⑶ 商品名、商品の説明、商品詳細を入力してください。
 
-   - 写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+⑷ ［利用規約に同意する］の横のチェックボックスを押して、チェックしてください。  
+<font color="#ff0000">※利用規約に同意いただけない場合は出品いただけません。</font>
 
-1. 商品名、商品の説明、商品詳細を入力してください。
+⑸ ［出品する］ボタンを押して出品完了です。
 
-1. ［利用規約に同意する］の横のチェックボックスを押して、チェックしてください。  
-※利用規約に同意いただけない場合は出品いただけません。
+※入力途中の情報を下書き保存しておくことも可能です。
 
-1. ［出品する］ボタンを押して出品完了です。
-
-・入力途中の情報を下書き保存しておくことも可能です。
-
-・出品画面の右上の［フォルダアイコン］または、最下部の［下書き一覧］ボタンを押すと保存した下書き一覧が表示されます。
-
-修正しました
+※出品画面の右上の［フォルダアイコン］または、最下部の［下書き一覧］ボタンを押すと保存した下書き一覧が表示されます。
+<hr>
