--- a/2.はじめてガイド/1.出品する/1.出品するには/2.出品時に気を付けること.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/2.出品時に気を付けること.md
@@ -1,39 +1,41 @@
 # 出品時に気を付けること  
+<hr>
+<font color="#ff0000">商品の詳細が伝わるように、写真の撮影や、商品詳細の記述にご協力をお願いいたします。
+</font>
 
-商品の詳細が伝わるように、写真の撮影や、商品詳細の記述にご協力をお願いいたします。  
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>【商品の写真】</h3></div>
 
-### 【商品の写真】
+引き取りをするユーザ様がどのような商品か把握しやすいよう、見やすく鮮明な写真を撮影いただき、出品をお願いいたします。<br>
+必ず自身で撮影したものを使用してください。<br>
 
-引き取りをするユーザ様がどのような商品か把握しやすいよう、見やすく鮮明な写真を撮影いただき、出品をお願いいたします。  
-必ず自身で撮影したものを使用してください。  
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>【商品名と説明】</h3></div>
 
-### 【商品名と説明】
-
-できる限り正確で適切な記述をお心がけください。  
+できる限り正確で適切な記述をお心がけください。<br>
 探しやすいキーワードを使用することで引き取りユーザー様が商品を見つけやすくなります。
 
 商品の詳細の情報（素材や状態）などもできる限り入力いただくと、引き取りをするユーザ様もどのような商品か把握しやすくなります。
 
-### 【商品の詳細】
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>【商品の詳細】</h3></div>
 
-・カテゴリー  
-コネポケでは、カテゴリー検索ができます。  
+<b>・カテゴリー</b> <br>
+コネポケでは、カテゴリー検索ができます。<br>
 適切なカテゴリーが選択されていないとカテゴリーを指定した検索で検索結果に表示されませんので、適切な商品カテゴリーの選択をお願いいたします。
 
-・商品の状態  
+<b>・商品の状態</b> <br>
 商品の状態は適切に設定してください。
 
-・取引地域  
-コネポケでは、エリア検索もできます。  
+<b>・取引地域</b> <br>
+コネポケでは、エリア検索もできます。<br>
 エリアが選択されていないとエリアを指定した検索で検索結果に表示されませんので、適切なエリアの選択をお願いいたします。
 
-・引取り希望日  
+<b>・引取り希望日</b> <br>
 商品を引き取って欲しい日数の目安を引き取りユーザー様に伝えるための情報です。
 
-・配送の可否  
-直接引き取りにきていただく以外に、配送についての目安を引き取りユーザー様に伝えるための情報です。  
+<b>・配送の可否</b> <br>
+直接引き取りにきていただく以外に、配送についての目安を引き取りユーザー様に伝えるための情報です<br> 
 ［配送可能］で出品する場合は、送料でのトラブルを防止するため、商品説明内に送料についての記載をすることをお勧めしております。
 
----
-■ご注意  
+<hr>
+<font color="#ff0000">■ご注意<br>
 出品された商品の内容において、コネポケが定める基準に沿わなと判断された商品や、何らかの利用規約違反が確認された場合、非公開となる場合がございます。
+</font><hr>
