--- a/2.はじめてガイド/1.出品する/1.出品するには/3.取引申し込みされてからの流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/3.取引申し込みされてからの流れ.md
@@ -1,15 +1,16 @@
 # 取引申し込みされてからの流れ
+<hr>
+⑴ 取引が成立すると、通知が届きます。
 
-1. 取引が成立すると、通知が届きます。
+⑵ 取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+・取引メッセージの送信方法は、【取引メッセージでやり取りをする】でご確認ください。
 
-1. 取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。
+・取引メッセージは取引相手以外は閲覧できません。
 
-   - 取引メッセージの送信方法は、【取引メッセージでやり取りをする】でご確認ください。
+・配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［出品する］＞［配送について］＞［配送時の注意］をご確認ください。
+</div>
+⑶ 取引メッセージで決めた方法で商品を渡し、取引完了です。
 
-   - 取引メッセージは取引相手以外は閲覧できません。
-
-   - 配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［出品する］＞［配送について］＞［配送時の注意］をご確認ください。
-
-1. 取引メッセージで決めた方法で商品を渡し、取引完了です。
-
-1. 良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。
+⑷ 良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。
+<hr>
