--- a/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
@@ -6,3 +6,119 @@
 ご確認いただいても解決しない場合は、<br>
 <b>【お問い合せ】</b>より、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
 <hr>
+
+<div style="margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+<h3>■見本プランpadding0</h3>
+</div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 1px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■見本プランpadding1</h3></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 2px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■見本プランpadding2</h3></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 3px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%;"><font color="#000000">■見本プランpadding3+font120%</font></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">■見本プランpadding5+font120%</div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 3px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■見本プランpadding3</h3></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">■見本プランノーマル</div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+<div style="margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><b>■見本プラン太文字</b></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+<div style="margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>■見本プランh2</h2></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+<div style="margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■見本プランh3</h3></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+<div style="margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h4>■見本プランh4</h4></div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 2px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">■見本プランpadding0</div>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+・写真は4枚まで掲載できます。<br>
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffffe0;">
+・写真は4枚まで掲載できます。<br>
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #ffe0e2;">
+・写真は4枚まで掲載できます。<br>
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+・写真は4枚まで掲載できます。<br>
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 2px solid #ff3333; background-color: #ffffe0;">
+・border: 2px。<br>
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 3px solid #dcdcdc; background-color: #ffffe0;">
+・border: 2px。<br>
+・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+</div>
+
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。<br>
+お問い合せより、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+<div style="padding: 1px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;">
+<ol>
+<li>見本プランpadding1+リスト見本プランpadding1+リスト見本プランpadding1+リスト見本プランpadding1+リスト見本プランpadding1+リスト</li>
+<li>見本プランpadding1</li>
+<li>見本プランpadding1</li>
+<li>見本プランpadding1</li>
+<ul>
+<li>見本プランpadding1</li>
+<li>見本プランpadding1</li>
+<li>見本プランpadding1</li>
+</ul></ol></div>
+
+MDリスト  
+MDリストMDリストMDリスト  
+MDリスト
+- 商品を出品する
+- 出品商品を引き取る（お試し1回）
+- 欲しい商品をリクエストする（お試し1回）
+- リクエスト商品へレスポンスをする
+- 出品商品・リクエスト商品へコメントで質問する
+
+hrmlリスト<br>
+hrmlリストhrmlリストhrmlリスト<br>
+hrmlリスト
+<ul>
+<li>商品を出品する</li>
+<li>出品商品を引き取る（お試し1回）</li>
+<li>欲しい商品をリクエストする（お試し1回）</li>
+<li>リクエスト商品へレスポンスをする</li>
+<li>出品商品・リクエスト商品へコメントで質問する</li>
+</ul>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #008dd7;">
+・写真は4枚まで掲載できます。
+</div>
+
+<font color="#008dd7">・写真は4枚まで掲載できます。</font>
