--- a/1.コネポケ公式ガイド/ルールとマナー/2.コネポケで禁止されている行為.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/2.コネポケで禁止されている行為.md
@@ -281,7 +281,7 @@
 
 ・反社会的勢力等への関与、利益供与
 
-<b>【公序良俗・モラルに反する行為】</b>
+<b>【公序良俗・モラルに反する行為】 </b>
 
 ・民族差別、人種差別、性別、社会的身分、など差別につながることを意識させたり、それらにつながる行為
 
@@ -323,7 +323,7 @@
 
 ・他のユーザーまたは第三者が、理解することができなかったり、誤解や混乱をするおそれのある行為
 
-<b>【弊社またはコネポケに損害を与える行為】</b>
+<b>【弊社またはコネポケに損害を与える行為】 </b>
 
 ・コネポケの不具合を意図的に利用する行為
 
@@ -339,7 +339,7 @@
 
 ・当社の承認がないにも関わらず、コネポケに関連して営利を目的とする行為
 
-<b>【その他</b>
+<b>【その他】</b>
 
 ・倫理的視点で認められないと当社が判断する行為
 
