--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -2,25 +2,29 @@
 <hr>
 <h2><font color="#ff0000"> <b>法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの</b> </font></h2>
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #ff3333; background-color: #fffaf0;">
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 法令違反に抵触する恐れのあるもの
 主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【銃砲類、刀剣類】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【銃砲類、刀剣類】</b>
+</div>
 <font color="#ff0000">銃刀法違反にあたるもの<br>
 武器類とみなされるもの</font>
 
 ### ■主な違反商品
-・拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 
+- 拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 
 刀、ナイフ、包丁などで6cmを超えるもの
 
-・違法改造物や殺傷能力のあるエアガン、モデルガン
+- 違法改造物や殺傷能力のあるエアガン、モデルガン
 
 上記の製造、並びに改造に関するデータ<br>
 <font color="#ff0000">※法律上の許可、登録などがあっても投稿不可</font>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【薬物】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【薬物】</b>
+</div>
 <font color="#ff0000">覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの</font>
 
 ### ■主な違反商品
@@ -28,7 +32,9 @@
 
 ・毒物、劇物
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【盗難品・不正入手】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【盗難品・不正入手】</b>
+</div>
 <font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font>
 
 盗難・万引きしたもの、拾得したものや横領したもの、盗難品であることを知りながら出品する行為は窃盗罪、詐欺罪、盗品等関与罪および横領罪などの法律で厳しく処罰されます。
@@ -36,7 +42,9 @@
 ### ■主な違反商品
 ・窃盗、強盗、詐欺、恐喝、横領などの犯罪行為により取得されたもの
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【偽造品・偽ブランド品・レプリカ・模造品】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【偽造品・偽ブランド品・レプリカ・模造品】</b>
+</div>
 <font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの
 
 第三者の知的財産権を侵害しているもの
@@ -51,25 +59,27 @@
 </font>
 ### ■主な違反商品
 
-・偽造貨幣、偽造カード、偽造印鑑、偽造文書
+- 偽造貨幣、偽造カード、偽造印鑑、偽造文書
 
-・ブランド品のロゴを許諾なく使用する商品など、他人の商標権を侵害するもの
+- ブランド品のロゴを許諾なく使用する商品など、他人の商標権を侵害するもの
 
-・デザインやマークがブランド品やそのマークと酷似していると判断されるものや特定のブランドを想起させるもの
+- デザインやマークがブランド品やそのマークと酷似していると判断されるものや特定のブランドを想起させるもの
 
-・ブランド品の全部または一部を加工したリメイク品や加工のための素材として出品されたもの
+- ブランド品の全部または一部を加工したリメイク品や加工のための素材として出品されたもの
 
-・海賊版CD、DVD(個人的に複製したものを含む)や許諾なくキャラクターなどを使用したハンドメイド品など、他人の著作権を侵害するもの
+- 海賊版CD、DVD(個人的に複製したものを含む)や許諾なくキャラクターなどを使用したハンドメイド品など、他人の著作権を侵害するもの
 
-・コピーガードを回避するツールなど、不正競争防止法違反に該当するもの
+- コピーガードを回避するツールなど、不正競争防止法違反に該当するもの
 
-・芸能人などの肖像権を侵害するもの
+- 芸能人などの肖像権を侵害するもの
 
-・テレビ・ラジオの録画録音テープ
+- テレビ・ラジオの録画録音テープ
 
 <font color="#ff0000">※ハードディスクドライブ、フラッシュメモリなどの記憶媒体、ハードディスクレコーダーや、iPodなどの携帯型音楽端末等を出品する場合は、保存されている内容をすべて削除し、出品してください。</font>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【金券、有価証券】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【金券、有価証券】</b>
+</div>
 
 <font color="#ff0000">現金、金券類、カード類
 
@@ -114,7 +124,9 @@
 
 ・航空会社のマイレージ、その他各種ポイントカード、会員証
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【医薬品、医療機器】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【医薬品、医療機器】</b>
+</div>
 
 <font color="#ff0000">医薬品医療機器等法（以下「薬機法」）などの法令違反に抵触する恐れがあるもの
 </font>
@@ -154,6 +166,7 @@
 
 心電計やパルスオキシメータなどの特定保守管理医療機器
 
+
 なお、救急絆創膏などの一般医療機器（特定保守管理医療機器を除く）は販売に許可または届出が不要であり出品可能ですが、 こちら の遵守すべき事項にご注意ください。
 
 ＜その他＞
@@ -165,9 +178,12 @@
 医薬品医療機器等法（薬機法）については こちら もご覧ください。
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【許認可のない化粧品類や美容品】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【許認可のない化粧品類や美容品】</b>
+</div>
 
-<font color="#ff0000">許認可または手作りした化粧品類や美容品</font>
+<font color="#ff0000">許認可または手作りした化粧品類や美容品
+</font>
 
 ### ■主な違反商品
 
@@ -185,19 +201,29 @@
 
 ・医薬品医療機器等法（薬機法）については こちら もご覧ください。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【人体、臓器、細胞、血液】</h2></div>
-<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの</font>
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【密猟された動植物、販売禁止鳥獣】</h2></div>
-<font color="#ff0000">密猟された動植物、販売禁止鳥獣など</font>
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【法令に抵触する、悪用される恐れのあるもの】</h2></div>
-<font color="#ff0000">危険物や安全性に問題があるもの
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>
+■人体、臓器、細胞、血液</b>
+</div>
+<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
+</font>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>
+【密猟された動植物、販売禁止鳥獣】</b>
+</div>
+<font color="#ff0000">密猟された動植物、販売禁止鳥獣など
+</font>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>法令に抵触する、悪用される恐れのあるもの</b>
+</div>
+<font color="#ff0000">危険物や安全性に問題があるもの
 
 犯罪に使用される恐れのあるもの
 
 人体に危険を及ぼす可能性があるもの
 
 法令に抵触する状態に改造を施したもの
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -237,7 +263,9 @@
 
 2019年2月1日（金）以降は、PSEマークのないモバイルバッテリーは販売禁止（流通在庫を含む）となります。詳細は 経済産業省HP をご覧ください。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【たばこ】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【たばこ】</b>
+</div>
 
 ### ■主な違反商品
 
@@ -247,11 +275,13 @@
 
 ・その他ニコチンやタールが含まれるもの全般
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【食料品、飲料品、アルコール類】</h2></div>
-<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【食料品、飲料品、アルコール類】</b>
+</div>
+<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
 
 出品時に賞味(消費)期限を商品説明に記載するか、記載部分の写真を掲載してください。
-</font>
+</font>
 ### ■主な違反商品
 
 ・保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）
@@ -274,7 +304,9 @@
 
 ・東京都の食品安全情報サイト（外部サイト）
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【法令に抵触するサプリメント類】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【法令に抵触するサプリメント類】</b>
+</div>
 
 ### ■主な違反商品
 
@@ -292,8 +324,10 @@
 
 ・医薬品医療機器等法（薬機法）についてはこちらもご覧ください。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【チケット類】</h2></div>
-<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【チケット類】</b>
+</div>
+<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
 
 記名式の航空券
 
@@ -306,9 +340,11 @@
 その他、上記と同等とみなされるもの
 </font>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【象牙および希少野生動植物種の個体】</h2></div>
-<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
-</font>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【象牙および希少野生動植物種の個体】</b>
+</div>
+<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
+</font>
 
 ### ■主な違反商品
 
@@ -320,11 +356,13 @@
 
 ・種の保存法の対象となる動植物種は、環境省のホームページなどでご確認ください。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【危険なもの】</h2></div>
-<font color="#ff0000">発火性のあるもの
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【危険なもの】</b>
+</div>
+<font color="#ff0000">発火性のあるもの
 
 武器として使用される恐れのあるもの
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -336,7 +374,9 @@
 
 ・催涙スプレーなど
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【農薬】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【農薬】</b>
+</div>
 
 ### ■主な違反商品
 
@@ -354,7 +394,9 @@
 
 ・販売の届出や販売が禁止されている農薬は、農林水産省のホームページなどでご確認ください。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【危険ドラッグ】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【危険ドラッグ】</b>
+</div>
 
 ### ■主な違反商品
 
@@ -364,11 +406,13 @@
 
 ※法令で販売・所持が規制されていなくても、本来と異なる用途を意図して販売することで、心身への影響が懸念される場合は投稿不可
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2> 【自己名義でない・所有者の変更登録ができない】</h2></div>
-<font color="#ff0000">自己名義でないもの
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【自己名義でない・所有者の変更登録ができない】</b>
+</div>
+<font color="#ff0000">自己名義でないもの
 
 所有者の変更ができないまたは時間がかかるもの
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -381,11 +425,13 @@
 ・車、バイク、自転車、農業機械、船、ボート、ジェット、建設機械
 家、マンション、土地、田んぼ、畑、倉庫（登記している）
 <hr>
-<h2> <b><font color="#ff0000">公序良俗、モラルに反するもの</font></b></h2>
+<h2> <b> <font color="#ff0000">公序良俗、モラルに反するもの</font> </b></h2>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【18禁、アダルト関連、児童ポルノ】</h2></div>
-<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
-</font>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【18禁、アダルト関連、児童ポルノ】</b>
+</div>
+<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
+</font>
 
 ### ■主な違反商品
 
@@ -433,7 +479,9 @@
 
 ・その他、上記と同等品と判断されるもの
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【青少年の保護育成上好ましくないもの】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【青少年の保護育成上好ましくないもの】</b>
+</div>
 
 
 ### ■主な違反商品
@@ -476,7 +524,9 @@
 
 ・反社会的なものまたはその可能性があると当社が判断した商品
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【不衛生なもの・不快感を与えるもの】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【不衛生なもの・不快感を与えるもの】</b>
+</div>
 
 ### ■主な違反商品
 
@@ -484,8 +534,7 @@
 
 ・死体写真・画像のようなグロテスクな商品、その他嫌悪感・不快感を与えるもの
 
-<hr>
-<h2> <b><font color="#ff0000">その他、コネポケが不適切と判断したもの</font></b></h2>
+## <b>その他、コネポケが不適切と判断したもの</b>
 
 ## 【生体・ぺット】
 
@@ -493,13 +542,15 @@
 
 ・投稿時点で生まれていない生体
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【物品ではないもの】</h2></div>
-<font color="#ff0000">ゲームアカウントやゲーム内の通貨
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【物品ではないもの】</b>
+</div>
+<font color="#ff0000">ゲームアカウントやゲーム内の通貨
 
 アイテムなどの電子データ
 
 情報、サービスの提供など
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -520,7 +571,9 @@ MLM(マルチレベルマーケティング)商品
 
 ・違法行為・脱税につながる売買、公序良俗を乱す商品売買、その他、事務局にて不適切と判断した売買など
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【手元にないもの】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【手元にないもの】</b>
+</div>
 
 ### ■主な違反商品
 
@@ -532,7 +585,9 @@ MLM(マルチレベルマーケティング)商品
 
 ・その他、手元にないと判断されるもの
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【福袋 (内包される商品の名称や写真がないもの)】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【福袋 (内包される商品の名称や写真がないもの)】</b>
+</div>
 
 
 ### ■主な違反商品
@@ -543,15 +598,17 @@ MLM(マルチレベルマーケティング)商品
 
 ・その他、商品の内容が不透明、不明瞭なもの
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【携帯電話端末について】</h2></div>
-<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【携帯電話端末について】</b>
+</div>
+<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
 
 残債がある携帯端末、契約中の携帯端末
 
 出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。
 
 残債がある、契約中である、名義を変更できないものは、トラブルの原因となるため、お取引をご遠慮ください。
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -587,7 +644,9 @@ MLM(マルチレベルマーケティング)商品
 ・KDDI：ネットワーク利用制限携帯電話機について
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>【事務局で不適切と判断されるもの】</h2></div>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>【事務局で不適切と判断されるもの】</b>
+</div>
 <font color="#ff0000">以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
 </font>
 
